服务器完成

--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -58,9 +58,77 @@ $ java -jar HMCL-3.6.11.265.jar
 查看配置信息：
 
 ```sh
-# pkg info -D minecraft-server
+root@ykla:/usr/ports/games/minecraft-server # pkg info -D minecraft-server
+minecraft-server-1.21.1:
+On install:
+When you first run minecraft-server, it will populate the file
+/usr/local/etc/minecraft-server/eula.txt
+
+It is required to read the EULA, and then set eula=true
+
+- Configuration files can be found in /usr/local/etc/minecraft-server/
+- Log and debug output files can be found in /var/log/minecraft-server/
+- World files can be found in /var/db/minecraft-server/
+
+Without daemon option:
+- To run the server, run /usr/local/bin/minecraft-server # 运行方法
+- To edit java's parameters, edit /usr/local/etc/minecraft-server/java-args.txt # java 参数
+- To run with a specific version of Java, set environment variable JAVA_VERSION, # 指定某一 java 版本
+  for example:
+    export JAVA_VERSION=22
+    /usr/local/bin/minecraft-server
+  or:
+    JAVA_VERSION=22 /usr/local/bin/minecraft-server
+
+With daemon option:
+- The service has been installed with the name 'minecraft'
+- To adjust maximum memory usage (-Xmx), use minecraft_memx= in /etc/rc.conf  # 指定最大内存占用
+- To adjust initial memory usage (-Xms), use minecraft_mems= in /etc/rc.conf # 指定初始化内存占用
+- To add other java parameters, use minecraft_args= in /etc/rc.conf # 指定初始化参数
+- To run with a specific version of Java, use minecraft_java_version= in /etc/rc.conf # 指定某一 java 版本
+- To see the interactive console, type service minecraft console
 ```
 
+```sh
+$ /usr/local/bin/minecraft-server
+
+…………省略一部分…………
+
+[15:52:21] [ServerMain/WARN]: Failed to load eula.txt
+[15:52:21] [ServerMain/INFO]: You need to agree to the EULA in order to run the server. Go to eula.txt for more info.
+```
+
+提示需要同意许可协议，将 `/usr/local/etc/minecraft-server/eula.txt` 里面的 `eula=false` 改成 `eula=true`。
+
+再次运行 `$ /usr/local/bin/minecraft-server`：
+
+```sh
+root@ykla:/usr/ports/games/minecraft-server # /usr/local/bin/minecraft-server
+Starting net.minecraft.server.Main
+[15:54:47] [ServerMain/INFO]: Environment: Environment[sessionHost=https://sessionserver.mojang.com, servicesHost=https://api.minecraftservices.com, name=PROD]
+[15:54:48] [ServerMain/INFO]: No existing world data, creating new world
+[15:54:49] [ServerMain/INFO]: Loaded 1290 recipes
+[15:54:49] [ServerMain/INFO]: Loaded 1399 advancements
+[15:54:49] [Server thread/INFO]: Starting minecraft server version 1.21.1
+[15:54:49] [Server thread/INFO]: Loading properties
+[15:54:49] [Server thread/INFO]: Default game type: SURVIVAL
+[15:54:49] [Server thread/INFO]: Generating keypair
+[15:54:49] [Server thread/INFO]: Starting Minecraft server on *:25565
+[15:54:50] [Server thread/INFO]: Using default channel type
+[15:54:50] [Server thread/INFO]: Preparing level "world"
+[15:54:53] [Server thread/INFO]: Preparing start region for dimension minecraft:overworld
+[15:54:53] [Worker-Main-2/INFO]: Preparing spawn area: 2%
+[15:54:54] [Worker-Main-2/INFO]: Preparing spawn area: 2%
+[15:54:54] [Worker-Main-3/INFO]: Preparing spawn area: 2%
+[15:54:55] [Worker-Main-1/INFO]: Preparing spawn area: 2%
+[15:54:55] [Worker-Main-2/INFO]: Preparing spawn area: 18%
+[15:54:56] [Worker-Main-1/INFO]: Preparing spawn area: 51%
+[15:54:56] [Worker-Main-3/INFO]: Preparing spawn area: 51%
+[15:54:56] [Server thread/INFO]: Time elapsed: 3317 ms
+[15:54:56] [Server thread/INFO]: Done (6.876s)! For help, type "help"
+```
+
+完成。
 
 
 ## 五分钟游戏
