--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -46,6 +46,25 @@ $ java -jar HMCL-3.6.11.265.jar
 
 ### 服务器端
 
+#### 安装 OpenJDK
+
+过旧的 jdk 版本并不支持，本文测试 23 正常。
+
+安装 OpenJDK23：
+
+```sh
+# pkg install openjdk23
+```
+
+或者：
+
+```sh
+# cd /usr/ports/java/openjdk23/ 
+# make install clean
+```
+
+#### 使用 Ports 或官方服务器
+
 经过测试 [Minecraft 官方服务器端](https://www.minecraft.net/en-us/download/server)可以直接在 FreeBSD 14.2 上运行。只需要安装 OpenJDK 即可。
 
 还可以使用 Ports 中的 `games/minecraft-server`：
