--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
@@ -3,11 +3,11 @@
 ## 安装 Qt Creator
 
 ```sh
-# cd /usr/ports/devel/qtcreator/ && make install clean
-# cd /usr/ports/misc/qt5-l10n/ && make install clean
+# cd /usr/ports/devel/qtcreator/ && make install clean # Qt Creator 本体
+# cd /usr/ports/misc/qt5-l10n/ && make install clean # Qt Creator 本地化语言包，如中文
 ```
 
-或（不建议）
+或（Qt Creator 不建议使用二进制包）
 
 ```sh
 # pkg install qtcreator qt5-l10n
@@ -15,7 +15,7 @@
 
 ## 中文化
 
-> 参见 [Bug 236518 - devel/qtcreator unsupported other languages ](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=236518)
+参见 [Bug 236518 - devel/qtcreator unsupported other languages ](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=236518)
 
 Qt creator 界面语言默认跟随系统，若没有，请在菜单里 Edit -> Preferences -> Environment -> Interface -> Language 手动更改。
 
@@ -43,3 +43,13 @@ libibusplatforminputcontextplugin.so
 - <https://wiki.qt.io/Qt_Localization>
 - <https://invent.kde.org/qt/qt/qttranslations>
 
+
+## 故障排除
+
+- 终端打开一次后就闪退并提示 `process exited with code 2.`
+
+待解决
+
+- 终端汉字显示缺失
+
+待解决
