--- a/di-24-zhang-freebsd-te-se/di-24.5-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
+++ b/di-24-zhang-freebsd-te-se/di-24.5-jie-li-yong-jiao-ben-zi-dong-sheng-cheng-bsdlibc-ku-wen-ben.md
@@ -194,7 +194,7 @@ rm -f $sorted_index
 
 ```sh
 #!/bin/sh
-fetch https://mirrors.ustc.edu.cn/freebsd/releases/amd64/14.1-RELEASE/src.txz   # 下载 src
+fetch https://mirrors.ustc.edu.cn/freebsd/releases/amd64/14.2-RELEASE/src.txz   # 下载 src
 tar jxvf src.txz usr/src/lib/libc/*.[23]    # 解压 man2，man3
 mv usr/src/lib/libc libc          # 减小目录层级
 rm -rf usr
@@ -230,8 +230,10 @@ cat /dev/null > bookmark.info
 cat /dev/null > index.list
 n=$1   # 起始页页码
 xsflag=1   # 第一个目录条目标记与其它不同
-
+chapterid=0
 for lv1 in `cat level1.list`;do      # 按level1分组处理
+	chapterid=$(( chapterid + 1 ))
+    sectionid=0
     titlecount=`grep "libc/${lv1}" level2.list | wc -l`   # 各章小节总数
     echo "[ /Title ($lv1) /Page $n /Count $titlecount /View [/XYZ null null 0] /OUT pdfmark" >> bookmark.info  # pdf 章标签
     first=1   # 目录中，在每章各小节前插入章名，first用于标记第一节
@@ -245,11 +247,12 @@ for lv1 in `cat level1.list`;do      # 按level1分组处理
             else
                 echo ".XA $n" >> toc.mdoc
             fi
-            echo ".BX ${lv1}____________________________________" >> toc.mdoc  # 目录不支持多级目录，只能通过标记以示不同
+            echo "$chapterid. ${lv1}" >> toc.mdoc  # 目录不支持多级目录，只能通过标记以示不同
             first=0
         fi
+        sectionid=$(( sectionid + 1 ))
         echo ".XA $n" >> toc.mdoc   # 写入小节页码
-        echo $title >> toc.mdoc     # 写入小节标题
+        echo '      '"$sectionid. $title" >> toc.mdoc     # 写入小节标题
         echo "[ /Title ($title) /Page $n /View [/Fit] /OUT pdfmark" >> bookmark.info  # pdf小节标签
         # 小节可有多个关键字，关键字和页码写入index.list
         for key in `cat $lv2 | sed -n '/.Sh NAME/,/.Sh/p' | egrep '^\.Nm [^ ]+' | cut -d" " -f 2 | sort -n | uniq`;do
@@ -285,7 +288,7 @@ cat libc.ps | awk -v p=$tocpages '{
    print $0;
  }' > libc.ps.tmp    # 为每一页生成页码
 cat libc.ps.tmp >> toc.ps  # 拼接到toc.ps文件中,此时toc.ps为完整文件
-ps2pdf toc.ps  # 转成pdf格式但没有书签
+
 
 ####################################################################
 
@@ -295,6 +298,12 @@ mv index.list.tmp index.list
 cut -c 1 index.list | tr [:upper:] [:lower:] | uniq >> index.level1   # 提取首字母以便索引按字母分小节
 indexcount=`wc -l index.level1 | cut -w -f2`    # 计算共几个小节（分组）
 echo "[ /Title (INDEX)  /Count $indexcount /View [/XYZ null null 0] /OUT pdfmark" >> bookmark.info  # 索引写入INDEX章标签
+echo ".DS C" >>printindex.mdoc
+echo "INDEX" >>printindex.mdoc
+echo ".DE" >>printindex.mdoc
+echo ".SP 1" >>printindex.mdoc
+echo ".2C" >>printindex.mdoc
+echo ".LB 0 0 0 0" >>printindex.mdoc
 for a in `cat index.level1`;do  # 按首字母对索引分组
 acount=`grep -i "^$a" index.list | wc -l`    # 计算每个首字母有多少关键字
 echo "[ /Title ($a)  /Count $acount /View [/XYZ null null 0] /OUT pdfmark" >> bookmark.info   # 分组名
@@ -302,13 +311,18 @@ echo "[ /Title ($a)  /Count $acount /View [/XYZ null null 0] /OUT pdfmark" >> bo
       key=`echo $i | cut -d: -f1`
       page=`echo $i | cut -d: -f2`
       echo "[ /Title ($key) /Page $page /View [/XYZ null null 0] /OUT pdfmark" >> bookmark.info
+      echo ".LI" >>printindex.mdoc
+      printf '%-40s %4d\n' "$key" $page >>printindex.mdoc
    done
 done
+echo ".LE" >>printindex.mdoc
 #####################################################################################
-
+groff -Tps -mm printindex.mdoc >>toc.ps
+ps2pdf toc.ps  # 转成pdf格式但没有书签
 # 用 bookmark.info 和无标签的 toc.pdf 生成带标签的 libc.pdf
 gs -sDEVICE=pdfwrite -q -dBATCH -dNOPAUSE -sOutputFile=libc.pdf bookmark.info -f toc.pdf
 
+rm -rf libc toc.* printindex.mdoc level* index.* content.list bookmark.info libc.ps libc.ps.tmp
 ```
 
 ## 现成文本
