--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -41,7 +41,7 @@ $ java -jar HMCL-3.6.11.265.jar
 
 #### 启动游戏
 
-失败。
+失败。参见 [[Bug] FreeBSD 下运行报错 Could not initialize class com.mojang.blaze3d.systems.RenderSystem](https://github.com/HMCL-dev/HMCL/issues/3529)。
 
 ### 服务器端
 
