--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -2,7 +2,7 @@
 
 该教程在红米手机上测试通过，理论上同时支持 Android 和 iOS。
 
-对于大多数新款安卓手机，可以实现在开启 WiFi 关闭流量的同时供给以太网给 FreeBSD。这样就不会消耗流量了。
+对于大多数新款安卓手机，可以实现在开启 WiFi 关闭流量的同时供给以太网给 FreeBSD。这样就不会消耗流量了：路由器（WiFi）——>手机（通过数据线）——>FreeBSD
 
 首先加载内核模块（旧版本需要）；
 
