--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -9,9 +9,9 @@
 首先加载内核模块（旧版本需要）；
 
 ```sh
-# kldload if_urndis #安卓 Android
+# kldload if_urndis #一般安卓设备（RNDIS）
 # kldload if_ipheth #苹果 iOS
-# kldload if_cdce   #其他设备
+# kldload if_cdce   #新款安卓设备（CDC ECM/NCM）
 ```
 
 启动时开机加载，写入到：`/boot/loader.conf`。
