--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -6,11 +6,13 @@
 
 ![](../.gitbook/assets/UbuntuonBSD.png)
 
-> **以下教程仅在 FreeBSD 13.1-release 测试通过。构建的是 Ubuntu 22.04 LTS（18.04\20.04 亦可）。兼容层使用技术实际上是 Linux jail，并非 chroot。**
+> **技巧**
+>
+>**以下教程仅在 FreeBSD 13.1-release 测试通过。构建的是 Ubuntu 22.04 LTS（18.04\20.04 亦可）。兼容层使用技术实际上是 Linux jail，并非 chroot。**
 >
 > 类似的方法可以构建 Debian 兼容层。
 
-**更多其他系统请看`/usr/local/share/debootstrap/scripts/`**
+更多其他系统请看`/usr/local/share/debootstrap/scripts/`
 
 ### 开始构建
 
