--- a/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.3-jie-linux-jian-rong-ceng-ji-yu-ubuntudebian.md
@@ -1,20 +1,18 @@
 # 第 21.3 节 Linux 兼容层——基于 Ubuntu/Debian
 
-> 视频教程：[06-FreeBSD-Ubuntu 兼容层脚本使用说明](https://www.bilibili.com/video/BV1iM4y1j7E9)
+视频教程：[06-FreeBSD-Ubuntu 兼容层脚本使用说明](https://www.bilibili.com/video/BV1iM4y1j7E9)
 
 ## Ubuntu 兼容层
 
 ![](../.gitbook/assets/UbuntuonBSD.png)
 
-> **技巧**
->
->**以下教程仅在 FreeBSD 13.1-release 测试通过。构建的是 Ubuntu 22.04 LTS（18.04\20.04 亦可）。兼容层使用技术实际上是 Linux jail，并非 chroot。**
->
-> 类似的方法可以构建 Debian 兼容层。
+以下教程在 14.2-RELEASE 测试通过。兼容层使用技术实际上是 Linux jail，并非 chroot。
 
-更多其他系统请看`/usr/local/share/debootstrap/scripts/`
+类似的方法可以构建 Debian 兼容层。
 
-### 开始构建
+更多其他系统请看`/usr/local/share/debootstrap/scripts/`。
+
+### 开始构建（基于 Ubuntu 22.04 LTS）
 
 ```sh
 # sysrc linux_enable="YES"
@@ -79,7 +77,7 @@ linsysfs        /compat/ubuntu/sys      linsysfs        rw,late                 
 在卸载 rsyslog 之后，换源，由于 SSL 证书没有更新，所以还不能用 https 源：
 
 ```sh
-# ee /compat/ubuntu/etc/apt/sources.list #此时处于 FreeBSD 系统！因为 Ubuntu 兼容层还没有文本编辑器。
+# ee /compat/ubuntu/etc/apt/sources.list # 此时处于 FreeBSD 系统！因为 Ubuntu 兼容层还没有文本编辑器。
 ```
 
 写入：
@@ -102,7 +100,8 @@ deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted unive
 # apt update && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans # 此时已经位于 Ubuntu 兼容层了。
 ```
 
-### Shell 脚本
+
+### Shell 脚本（基于 Ubuntu 22.04 LTS，FreeBSD 14.2 RELEASE 测试通过）
 
 
 脚本内容如下：
@@ -178,7 +177,7 @@ if ! /usr/bin/which -s debootstrap; then
                 ;;
         esac
     fi
-echo "now we will bootstrap ${codename}.press any key."
+echo "now we will bootstrap ${codename}. press any key."
 read  answer
 
 debootstrap ${codename} ${rootdir} ${baseurl}
@@ -224,20 +223,11 @@ echo "deb-src http://mirrors.ustc.edu.cn/ubuntu/ jammy-backports main restricted
 
 echo "remove rsyslog and install nano fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans and wget"
 chroot ${rootdir} /bin/bash -c "apt remove rsyslog && apt update && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei language-pack-zh-hans"
-echo "Now you can run '#chroot /compat/ubuntu/ /bin/bash' Into Ubuntu"
+echo "Now you can run '#chroot /compat/ubuntu/ /bin/bash' Into Ubuntu 22.04 LTS"
 ```
 
+## 附：Debian 12（bookworm）（FreeBSD 14.2 RELEASE 测试通过）
 
-
-## Debian 12（bookworm）仅限 FreeBSD 13.2 及以下版本
-
-
-为方便读者，有如下脚本：
-
-```sh
-# fetch http://book.bsdcn.org/debian.sh
-# sh debian.sh
-```
 
 脚本内容如下：
 
@@ -312,7 +302,7 @@ if ! /usr/bin/which -s debootstrap; then
                 ;;
         esac
     fi
-echo "now we will bootstrap ${codename}.press any key."
+echo "now we will bootstrap ${codename}. press any key."
 read  answer
 
 debootstrap ${codename} ${rootdir} ${baseurl}
@@ -368,17 +358,15 @@ echo "# deb http://mirrors.ustc.edu.cn/debian stable-proposed-updates main contr
 echo "# deb-src http://mirrors.ustc.edu.cn/debian stable-proposed-updates main contrib non-free non-free-firmware" >> /compat/debian/etc/apt/sources.list
 echo "deb http://mirrors.ustc.edu.cn/debian-security/ stable-security main non-free contrib" >> /compat/debian/etc/apt/sources.list
 echo "# deb-src http://mirrors.ustc.edu.cn/debian-security/ stable-security main non-free contrib" >> /compat/debian/etc/apt/sources.list
-echo "Acquire::http::Pipeline-Depth \"0\";" > /compat/debian/etc/apt/apt.conf.d/99nopipelining
-echo 'APT::Cache-Start "100000000";' | tee /compat/debian/etc/apt/apt.conf.d/70debcoebconf
 
 
 echo "install nano fonts-wqy-microhei  fonts-wqy-zenhei and wget"
 chroot ${rootdir} /bin/bash -c " apt update && apt --fix-broken install -y && apt upgrade && apt install nano wget fonts-wqy-microhei  fonts-wqy-zenhei -y"
-echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian"
+echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian 12 bookworm"
 ```
 
 
-## 安装 Windows 11 字体【可选。自制包，打包同时兼容与低版本 Ubuntu】
+## 安装 Windows 11 字体（可选。自制包，打包同时兼容 debian、低版本 Ubuntu）
 
 ```sh
 # apt install git
@@ -387,19 +375,15 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian"
 # dpkg -i ttf-ms-win11-*.deb
 ```
 
-
-
-
-
-
-
 ## 运行 X11 软件
 
 ```sh
 # xhost +local：#此时处于 FreeBSD 系统！
 ```
 
-## 不知道程序的命令行启动命令是什么？
+## 故障排除
+
+### 不知道程序的命令行启动命令是什么？
 
 请按以下方法依次查找(以 `gedit` 为例)：
 
@@ -416,7 +400,7 @@ echo "Now you can run '#chroot /compat/debian/ /bin/bash' Into debian"
 >
 > 把 XXX 换成想要搜索的软件名即可。
 
-## 缺失 .so 文件
+### 缺失 .so 文件
 
 - 首先看看缺失哪些 .so 文件，一般不会只缺失一个。
 
@@ -471,9 +455,9 @@ root@ykla:/# ldd /usr/bin/qq
 …………………………以下省略……………………………………
 ```
 
+## systemd 与 wine
 
+Systemd 不可用，但可以用`server xxx start`。
 
-> Systemd 不可用，但可以用`server xxx start`。
->
-> 导入过 [https://github.com/zq1997/deepin-wine](https://github.com/zq1997/deepin-wine) 源以安装 deepin-qq，deepin-wechat 等软件，但都提示`段错误`。所有 Wine 程序都无法正常运行。如果你能解决这个问题，请提出 issue 或者 pull。
+导入过 [https://github.com/zq1997/deepin-wine](https://github.com/zq1997/deepin-wine) 源以安装 deepin-qq，deepin-wechat 等软件，但都提示`段错误`。所有 Wine 程序都无法正常运行。如果你能解决这个问题，请提出 issue 或者 pull。
 
