--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -6,12 +6,16 @@
 
 路由器（WiFi）⇒ 手机（关闭数据流量）⇒ FreeBSD（通过数据线连接）
 
+>**技巧**
+>
+>如果是 root 过的 Android 设备，还可以通过数据线共享手机的 VPN 给 FreeBSD 设备。参见软件 [VPN 热点](https://play.google.com/store/apps/details?id=be.mygod.vpnhotspot&hl=zh&pli=1)。
+
 首先加载内核模块（旧版本需要）；
 
 ```sh
-# kldload if_urndis #一般安卓设备（RNDIS）
-# kldload if_ipheth #苹果 iOS
-# kldload if_cdce   #新款安卓设备（CDC ECM/NCM）
+# kldload if_urndis # 一般 Android 设备（RNDIS）
+# kldload if_ipheth # 苹果 iOS 等
+# kldload if_cdce   # 其他 Android 设备（CDC ECM/NCM）
 ```
 
 启动时开机加载，写入到：`/boot/loader.conf`。
@@ -22,7 +26,7 @@ if_cdce_load="YES"
 if_ipheth_load="YES"
 ```
 
-然后将 USB 数据线连接到 FreeBSD，打开手机的以太网网络共享即可。一般是 ue0，获取 ip 地址即可联网：
+然后将 USB 数据线连接到 FreeBSD，打开手机的以太网网络共享即可。一般是 `ue0`，获取 IP 地址即可联网：
 
 ```sh
 # dhclient ue0
