--- a/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
@@ -20,7 +20,7 @@
 $ man 4 linux
 ```
 
-输出翻译如下：
+`man 4 linux` 的输出翻译如下：
 
 ---
 
@@ -32,50 +32,54 @@ $ man 4 linux
 **简介**
      要在启动时启用 Linux ABI，请在 `rc.conf(5)` 中添加以下行：
 
-           `linux_enable="YES"`
+```sh
+linux_enable="YES"
+```
 
 **描述**
      Linux 内核模块提供了有限的 Linux ABI（应用二进制接口）兼容性，使得无需虚拟化和仿真即可运行许多未修改的 Linux 应用程序。提供的一些功能包括：
 
-     •   Linux 到 FreeBSD 系统调用的转换
-     •   Linux 特有的系统调用
-     •   针对 Linux 进程的特殊信号处理
-     •   路径转换机制
-     •   Linux 特有的虚拟文件系统
+- Linux 到原生系统调用的转换
+- Linux 特有的系统调用
+- Linux 进程的特殊信号处理
+- 路径转换机制
+- Linux 特有的虚拟文件系统
 
-     路径转换机制使得 Linux 进程在查找文件路径时，会首先在 `emul_path`（默认为 `/compat/linux`）下查找，然后才是 `/`。例如，当 Linux 进程尝试打开 `/etc/passwd` 时，它会首先访问 `/compat/linux/etc/passwd`，如果兼容路径不存在，则回退到 `/etc/passwd`。此机制确保 Linux 进程加载的是 Linux 共享库，而非它们对应的 FreeBSD 版本，并且为某些其他文件和虚拟文件系统提供替代版本。
+     路径转换机制使得 Linux 进程在查找文件路径时，会首先在 `emul_path`（默认为 `/compat/linux`）下查找，然后才是 `/`。例如，当一个 Linux 进程尝试打开 `/etc/passwd` 时，它会首先访问 `/compat/linux/etc/passwd`，如果兼容路径不存在，则回退到 `/etc/passwd`。此机制确保 Linux 进程加载的是 Linux 共享库，而非它们对应的 FreeBSD 版本，并且为某些其他文件和虚拟文件系统提供替代版本。
 
      要将 Linux 共享库和系统文件安装到 `/compat/linux`，可以使用 Port `emulators/linux_base-c7`或包，或者从 `sysutils/debootstrap` 安装 `debootstrap(8)`。
 
      为避免在启动时挂载 Linux 特有的文件系统，可以在 `rc.conf(5)` 文件中添加以下行：
 
-           `linux_mounts_enable="NO"`
+```sh
+linux_mounts_enable="NO"
+```
 
 **SYSCTL 变量**
      以下变量既可作为 `sysctl(8)` 变量，亦可作为 `loader(8)` 可调参数使用：
 
-     `compat.linux.debug`
+- `compat.linux.debug`
              启用调试消息。设置为 `0` 可静音。默认为 `3`。设置为 `1` 时打印调试消息，报告未实现的功能（仅一次）。设置为 `2` 时类似于 `1`，但也会打印已实现但未测试的功能的消息（仅一次）。设置为 `3` 及更高时，类似于 `2`，但没有消息频率限制。
 
-     `compat.linux.default_openfiles`
+- `compat.linux.default_openfiles`
              Linux 应用程序的默认软打开文件资源限制。设置为 `-1` 即禁用该限制。默认为 `1024`。
 
-     `compat.linux.emul_path`
+- `compat.linux.emul_path`
              Linux 运行时环境的路径。默认为 `/compat/linux`。
 
-     `compat.linux.osname`
+- `compat.linux.osname`
              Linux 内核操作系统名称。默认为 "Linux"。
 
-     `compat.linux.osrelease`
+- `compat.linux.osrelease`
              Linux 内核操作系统发布版本。不建议在非开发系统上修改此值，因为这可能会影响 Linux 程序的工作方式。已知某些版本的 GNU libc 会根据该值的不同使用不同的系统调用。
 
-     `compat.linux.oss_version`
+- `compat.linux.oss_version`
              Linux 开放音频系统版本。默认为 `198144`。
 
-     `compat.linux.preserve_vstatus`
+- `compat.linux.preserve_vstatus`
              设置为 1 时，防止 Linux 应用程序重置 `termios(4)` 的 VSTATUS 设置。从用户角度来看，这使得 `SIGINFO` 对 Linux 可执行文件有效。默认为 `1`。
 
-     `compat.linux.setid_allowed`
+- `compat.linux.setid_allowed`
              启用处理新进程镜像文件的用户 ID 和组 ID 设置模式位（set-user-ID 和 set-group-ID）。设置为 0 时，新的 Linux 镜像始终使用发出 `execve(2)` 调用的程序的凭证，而忽略镜像文件的模式。因为 FreeBSD 没有完全仿真 Linux 环境，缺失的功能可能会导致安全漏洞。默认为 `1`。
 
      `compat.linux32.emulate_i386`
@@ -99,7 +103,7 @@ $ man 4 linux
 **BUG**
      某些 Linux 特有的系统调用和系统调用参数的支持仍然缺失。
 
-FreeBSD 14.2-RELEASE            2022 年 1 月 9 日           FreeBSD 14.2-RELEASE
+FreeBSD 14.2-RELEASE    2022 年 1 月 9 日    FreeBSD 14.2-RELEASE
 
 ---
 
