--- a/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.1-jie-ftp-fu-wu-qi.md
@@ -10,7 +10,7 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 
 > **注意**
 >
->本示例基于 mysql 5.x。
+>本示例基于 mysql 5.x。请自行安装 mysql，理论上兼容 mysql 5.x、8.x。
 
 ### 安装
 
@@ -29,9 +29,10 @@ FTP 即 File Transfer Protocol（文件传输协议）。使用 FTP 服务搭建
 # make install clean
 ```
 
-> **注意：关于 mysql 的基本设置请看 第十七章**
->
-> **请自行安装 mysql，理论上兼容 mysql 5.x、8.x**
+> **注意**
+> 
+>关于 mysql 的基本设置请看其他章节**
+
 
 ### 配置 /usr/local/etc/pure-ftpd.conf 文件
 
