--- a/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.5-yi-tai-wang-ka.md
@@ -158,7 +158,7 @@ if_re_name="/boot/modules/if_re.ko"
 
 ## 2.5 G
 
-英特尔 i225-V、i226-V 2.5G 网卡默认应该能驱动，但无需配置。未测试。由 `igc` 驱动。
+英特尔 i225-V、i226-V 2.5G 网卡默认可驱动，亦无需配置。已测试（I226-V rev04）。由 `igc` 驱动。网卡显示为 `igc0` 样式。
 
 支持列表：
 
