--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.1-jie-you-xi.md
@@ -27,12 +27,12 @@
 
 #### 配置 HMCL
 
-从 [releases](https://github.com/HMCL-dev/HMCL/releases) 下载最新的发行版本（写作本文时为 `HMCL-3.6.11.265.jar`）。
+从 [releases](https://github.com/HMCL-dev/HMCL/releases) 下载最新的发行版本。
 
 打开终端执行
 
 ```sh
-$ java -jar HMCL-3.6.11.265.jar
+$ java -jar HMCL*.jar
 ```
 
 不是所有的 Minecraft 版本都支持，适配版本请参考[平台支持状态](https://github.com/HMCL-dev/HMCL/blob/main/PLATFORM_cn.md)。
@@ -41,7 +41,9 @@ $ java -jar HMCL-3.6.11.265.jar
 
 #### 启动游戏
 
-失败。参见 [[Bug] FreeBSD 下运行报错 Could not initialize class com.mojang.blaze3d.systems.RenderSystem](https://github.com/HMCL-dev/HMCL/issues/3529)。
+![FreeBSD 玩 Minecraft](../.gitbook/assets/mc1.png)
+
+![FreeBSD 玩 Minecraft](../.gitbook/assets/mc2.png)
 
 ### 服务器端
 
@@ -146,7 +148,41 @@ Starting net.minecraft.server.Main
 [15:54:56] [Server thread/INFO]: Done (6.876s)! For help, type "help"
 ```
 
-完成。
+按 **ctrl** + **c** 中断。因为此时非正版用户和未登录用户无法使用此服务器。我们需要关闭正版验证。
+
+`/usr/local/etc/minecraft-server/server.properties` 将其中的 `online-mode=false` 改成 `online-mode=true`
+
+然后再次运行服务器：
+
+```sh
+root@ykla:/usr/ports/games/minecraft-server # /usr/local/bin/minecraft-server
+Starting net.minecraft.server.Main
+[18:47:47] [ServerMain/INFO]: Environment: Environment[sessionHost=https://sessionserver.mojang.com, servicesHost=https://api.minecraftservices.com, name=PROD]
+[18:47:51] [ServerMain/INFO]: Loaded 1337 recipes
+[18:47:51] [ServerMain/INFO]: Loaded 1448 advancements
+[18:47:51] [Server thread/INFO]: Starting minecraft server version 1.21.3
+[18:47:51] [Server thread/INFO]: Loading properties
+[18:47:51] [Server thread/INFO]: Default game type: SURVIVAL
+[18:47:51] [Server thread/INFO]: Generating keypair
+[18:47:51] [Server thread/INFO]: Starting Minecraft server on *:25565
+[18:47:51] [Server thread/INFO]: Using default channel type
+[18:47:52] [Server thread/WARN]: **** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
+[18:47:52] [Server thread/WARN]: The server will make no attempt to authenticate usernames. Beware.
+[18:47:52] [Server thread/WARN]: While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
+[18:47:52] [Server thread/WARN]: To change this, set "online-mode" to "true" in the server.properties file.
+[18:47:52] [Server thread/INFO]: Preparing level "world"
+[18:47:52] [Server thread/INFO]: Preparing start region for dimension minecraft:overworld
+[18:47:53] [Worker-Main-5/INFO]: Preparing spawn area: 0%
+[18:47:53] [Worker-Main-5/INFO]: Preparing spawn area: 0%
+[18:47:53] [Worker-Main-5/INFO]: Preparing spawn area: 0%
+[18:47:53] [Server thread/INFO]: Time elapsed: 1233 ms
+[18:47:53] [Server thread/INFO]: Done (1.709s)! For help, type "help"
+[18:48:34] [Server thread/INFO]: ykla[/127.0.0.1:37462] logged in with entity id 39 at (-1.5, 63.0, 1.5)
+[18:48:34] [Server thread/INFO]: ykla joined the game
+
+```
+
+![FreeBSD 玩 Minecraft](../.gitbook/assets/mc3.png)
 
 ## 五分钟游戏
 
