--- a/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.3-jie-usb-rndis-usb-wang-luo-gong-xiang.md
@@ -1,6 +1,6 @@
 # 第 14.3 节 USB 网络共享（USB tethering）
 
-该教程在红米手机上测试通过，理论上同时支持 Android 和 iOS。
+该教程于红米手机（红米 Note 12 5G）测试通过，理论上同时支持 Android 和 iOS。
 
 对于大多数新款安卓手机，可以实现在开启 WiFi 关闭流量的同时供给以太网给 FreeBSD。这样就不会消耗流量了：
 
