--- a/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.1-jie-linux-jian-rong-ceng-shi-xian.md
@@ -115,7 +115,7 @@ FreeBSD 14.2-RELEASE    2022 年 1 月 9 日    FreeBSD 14.2-RELEASE
 
 换句话说就是，借助 Linuxulator 这个内核模块，FreeBSD 内核可以把自己伪装成一个 Linux 内核，但实际上在运行 Linux 进程的依旧是 FreeBSD 内核，负责处理 Linux 系统调用的依旧是 FreeBSD 内核里的代码。并且站在 FreeBSD 内核的角度，通过 Linuxulator 运行的 Linux 进程和 FreeBSD 进程**无本质区别**。Linux 进程就是 FreeBSD 进程。
 
-# 什么是 Linux 兼容层
+## 什么是 Linux 兼容层
 
 > 路径转换机制使 Linux 进程在 `/` 之前查找 `emul_path`（默认为 `/compat/linux`）下的文件路径。例如，当 Linux 进程试图打开 `/etc/passwd` 时，它将真正访问 `/compat/linux/etc/passwd`，除非后者不存在。这被用来确保 Linux 进程加载 Linux 共享库，而不是类似名字的 FreeBSD 对应库，同时也提供了某些其他文件和虚拟文件系统的替代版本。
 
