--- a/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
+++ b/di-26-zhang-openbsd/di-26.1-jie-an-zhuang.md
@@ -243,6 +243,10 @@ boundend: 167772127
 
 恭喜！系统已成功安装，重启后可进入系统。
 
+>**警告**
+>
+>如果不想遇到 `ssh(fail)` 的 `no hostkeys available invalid format` 报错，请在重启前，恢复网络连接。
+
 ### 附录：自定义分区
 
 
