--- a/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -195,11 +195,11 @@ $ git clone https://github.com/vinceliuice/Tela-icon-theme && cd Tela-icon-theme
 ```
 
 
-## KDE 5
+## KDE 6
 
 >**警告**
 >
->此小节有问题（窗口是黑的），待未来再测试。
+>该桌面在 VMware 17 UEFI 环境下有问题（窗口是灰色的，就一个鼠标可移动）。且 BIOS 模式下 root 用户面临着相同的问题，仅普通用户正常。目前不确定物理机下的状态，请有力者测试。
 
 本教程基于 OpenBSD 7.6。
 
