--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.2-jie-freebsd-duo-ying-pan-efi-yin-dao-tong-yi.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.2-jie-freebsd-duo-ying-pan-efi-yin-dao-tong-yi.md
@@ -55,4 +55,4 @@
 
 重启进入 Windows，使用 easyuefi 激活 `FreeBSD 14.2` 这个启动项即可。
 
-若再次启动 FreeBSD 没有问题，方可使用 DiskGenius 删除 nvd0 磁盘的 EFI 分区及文件。
+若再次启动 FreeBSD 没有问题，方可使用 [DiskGenius](https://www.diskgenius.cn/) 或其他分区工具删除 nvd0 磁盘的 EFI 分区及文件。
