--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -32,3 +32,66 @@ autoboot_delay="2"
 - [rc.conf -- system configuration information](https://man.freebsd.org/cgi/man.cgi?rc.conf(5))
 - [acpi -- Advanced	Configuration and Power	Management support](https://man.freebsd.org/cgi/man.cgi?acpi(4))
 
+## 调整 TTY 分辨率
+
+### 修改“gop”（通用方法）
+
+在出来 FreeBSD 菜单的时候，按下 **ESC** 键，脱离引导。会出现提示符 `OK `。输入 `gop list` 可以看到所有支持的分辨率列表：
+
+
+```sh
+OK gop list
+mode 0: 1920x1080x32, stride=1920
+mode 1: 640x480x32, stride=640
+mode 2: 800x600x32, stride=800
+mode 3: 1024x768x32, stride=1024
+mode 4: 1280x720x32, stride=1280
+mode 5: 1280x1024x32, stride=1280
+```
+
+我这里选择 `mode 0`，先测一下效果：
+
+```sh
+OK gop set 0
+```
+
+当即立现。
+
+如果合适，继续引导：
+
+```sh
+OK menu
+```
+
+
+把配置写进 `/boot/loader.conf`：
+
+```sh
+exec="gop set 0"
+```
+
+
+### `efi_max_resolution`（UEFI）或 `vbe_max_resolution`（BIOS）
+
+根据文档［LOADER.CONF(5)](https://man.freebsd.org/cgi/man.cgi?loader.conf(5))，变量接受以下值：
+
+```sh
+		       Value	       Resolution
+		       480p	       640x480
+		       720p	       1280x720
+		       1080p	       1920x1080
+		       1440p	       2560x1440
+		       2160p	       3840x2160
+		       4k	       3840x2160
+		       5k	       5120x2880
+		       WidthxHeight    WidthxHeight
+```
+
+本文测试使用 `efi_max_resolution`：
+
+将 `efi_max_resolution="1080p" 写入 `/boot/loader.conf`，重启后效果与 gop 方法一致。
+
+#### 参考文献
+
+- [`gop set <mode>' being ignored in /boot/loader.conf](https://forums.freebsd.org/threads/gop-set-mode-being-ignored-in-boot-loader-conf.77779/)，`efi_max_resolution` 方法参考本文
+
