--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -73,7 +73,7 @@ exec="gop set 0"
 
 ### `efi_max_resolution`（UEFI）或 `vbe_max_resolution`（BIOS）
 
-根据文档［LOADER.CONF(5)](https://man.freebsd.org/cgi/man.cgi?loader.conf(5))，变量接受以下值：
+根据文档［LOADER.CONF(5)](https://man.freebsd.org/cgi/man.cgi?loader.conf)，变量接受以下值：
 
 ```sh
 		       Value	       Resolution
