--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -73,18 +73,18 @@ exec="gop set 0"
 
 ### `efi_max_resolution`（UEFI）或 `vbe_max_resolution`（BIOS）
 
-根据文档[LOADER.CONF(5)](https://man.freebsd.org/cgi/man.cgi?loader.conf(5))，变量接受以下值：
+根据文档 [LOADER.CONF(5)](https://man.freebsd.org/cgi/man.cgi?loader.conf(5))，两个变量接受以下值：
 
 ```sh
-		       Value	       Resolution
-		       480p	       640x480
-		       720p	       1280x720
-		       1080p	       1920x1080
-		       1440p	       2560x1440
-		       2160p	       3840x2160
-		       4k	       3840x2160
-		       5k	       5120x2880
-		       WidthxHeight    WidthxHeight
+值	           分辨率
+480p	        640x480
+720p	        1280x720
+1080p	       1920x1080
+1440p	       2560x1440
+2160p	       3840x2160
+4k	          3840x2160
+5k	          5120x2880
+宽x高        宽x高
 ```
 
 本文测试使用 `efi_max_resolution`：
