--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -93,5 +93,5 @@ exec="gop set 0"
 
 #### 参考文献
 
-- [`gop set <mode>' being ignored in /boot/loader.conf](https://forums.freebsd.org/threads/gop-set-mode-being-ignored-in-boot-loader-conf.77779/)，`efi_max_resolution` 方法参考本文
+- [gop set \<mode\> being ignored in /boot/loader.conf](https://forums.freebsd.org/threads/gop-set-mode-being-ignored-in-boot-loader-conf.77779/)，`efi_max_resolution` 方法参考本文
 - [How to find the valid values of efi_max_resolution](https://forums.freebsd.org/threads/how-to-find-the-valid-values-of-efi_max_resolution.84840/)，gop 方法参考本文，里面有个动图有点用
