--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -32,7 +32,7 @@ autoboot_delay="2"
 - [rc.conf -- system configuration information](https://man.freebsd.org/cgi/man.cgi?rc.conf(5))
 - [acpi -- Advanced	Configuration and Power	Management support](https://man.freebsd.org/cgi/man.cgi?acpi(4))
 
-## 调整 TTY 分辨率
+## 调整引导界面和 TTY 分辨率
 
 ### 修改“gop”（通用方法）
 
