--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -95,3 +95,41 @@ exec="gop set 0"
 
 - [gop set \<mode\> being ignored in /boot/loader.conf](https://forums.freebsd.org/threads/gop-set-mode-being-ignored-in-boot-loader-conf.77779/)，`efi_max_resolution` 方法参考本文
 - [How to find the valid values of efi_max_resolution](https://forums.freebsd.org/threads/how-to-find-the-valid-values-of-efi_max_resolution.84840/)，gop 方法参考本文，里面有个动图有点用
+
+## 自定义引导加载程序 Logo
+
+根据 man 页面 [BEASTIE.4TH(8)](https://man.freebsd.org/cgi/man.cgi?query=beastie.4th&sektion=8&manpath=FreeBSD)，默认有几种 logo 可选：
+
+- `fbsdbw`
+- `beastie`
+- `beastiebw`
+- `orb`（14.2 中默认，UEFI 下）
+- `orbbw`
+- `none`（无 Logo）
+  
+以 `fbsdbw` 为例，在 `/boot/loader.conf` 写入
+
+```sh
+loader_logo="fbsdbw"
+```
+
+重启效果：
+
+
+![fbsdbw](../.gitbook/assets/fbsdbw.png)
+
+![beastie](../.gitbook/assets/beastie.png)
+
+![beastiebw](../.gitbook/assets/beastiebw.png)
+
+![orb](../.gitbook/assets/ins1.png)
+
+![orbbw](../.gitbook/assets/orbbw.png)
+
+![none](../.gitbook/assets/none.png)
+
+#### 参考文献
+
+- [customize boot loader logo](https://forums.freebsd.org/threads/customize-boot-loader-logo.72903/)。本文主要来自此处
+- [How to change the FreeBSD logo which appears as soon it boots with that of the little devil.](https://forums.freebsd.org/threads/how-to-change-the-freebsd-logo-which-appears-as-soon-it-boots-with-that-of-the-little-devil.85934/)，试过了一样不生效退回原 logo。
+- [loader: Load a splash screen if "splash" variable is defined](https://reviews.freebsd.org/D45932)，可能有用，但是试过了也不行
