--- a/di-25-zhang-twincatbsd/di-25.4-jie-gu-zhang-pai-chu.md
+++ b/di-25-zhang-twincatbsd/di-25.4-jie-gu-zhang-pai-chu.md
@@ -1,6 +1,6 @@
 # 第 25.4 节 故障排除
 
-## 静态 IP 设置后，网卡存在两个 IP
+## 设置静态 IP 后，网卡存在两个 IP
 
 为一个网卡设置静态 IP 后，该网卡会有两个 IP：一个是静态 IP ，一个是 DHCP 服务分配的 IP 。这是倍福由于开机启动的 dhcpcd 服务的缺陷导致，更改 /etc/rc.conf 可解决:
 
