--- a/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-26-zhang-openbsd/di-26.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -232,6 +232,32 @@ export DESKTOP_SESSION=plasma
 ck-launch-session startplasma-x11
 ```
 
+或者
+
+
+```sh
+# 设置 XDG_RUNTIME_DIR 环境变量
+# 使用当前用户的 UID 创建一个专属运行时目录，用于进程间通信
+export XDG_RUNTIME_DIR=/tmp/run/$(id -u)
+
+# 如果目录不存在，则创建，并设置权限为仅当前用户可访问
+if [ ! -d $XDG_RUNTIME_DIR ]; then
+    mkdir -m 700 -p $XDG_RUNTIME_DIR
+fi
+
+# 启用 Qt 的标准错误日志输出，便于调试 Qt 应用程序
+export QT_FORCE_STDERR_LOGGING=1
+
+# 设置当前桌面环境为 KDE（用于兼容桌面应用和服务）
+export XDG_CURRENT_DESKTOP=KDE
+
+# 设置当前桌面会话为 plasma（标识 KDE Plasma 桌面环境）
+export DESKTOP_SESSION=plasma
+
+# 将标准输出和标准错误日志保存到 ~/.startplasma-x11.log 文件中
+/usr/local/bin/startplasma-x11 > ~/.startplasma-x11.log 2>&1
+```
+
 
 设置完毕后，重新登录账户或在控制台运行 `startx` 即可进入 KDE 桌面。
 
