--- a/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
+++ b/di-23-zhang-yin-dao-yu-hui-fu/di-23.4-jie-yin-dao-jie-mian.md
@@ -89,7 +89,7 @@ exec="gop set 0"
 
 本文测试使用 `efi_max_resolution`：
 
-将 `efi_max_resolution="1080p" 写入 `/boot/loader.conf`，重启后效果与 gop 方法一致。
+将 `efi_max_resolution="1080p"` 写入 `/boot/loader.conf`，重启后效果与 gop 方法一致。
 
 #### 参考文献
 
