--- a/di-14-zhang-wang-luo-guan-li/di-14.6-USB-wang-ka.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.6-USB-wang-ka.md
@@ -24,7 +24,7 @@
 
 **经过在树莓派 5 上的测试，AX88179A 和 RTL8156B 均可连续正常工作不断流，并维持 72 小时以上。**
 
-**如果随便按芯片组来买网卡，FreeBSD 大概率未支持其 VendorID 和 ProductID——比如“DOREWIN 达而稳。这种情况下要联系开发者将你的硬件写入驱动，然后重新编译内核才可以。”**
+**如果随便按芯片组来买网卡，FreeBSD 大概率未支持其 `VendorID` 和 `ProductID`——比如“DOREWIN 达而稳”。这种情况下要联系开发者将你的硬件写入驱动，然后重新编译内核才可以。**
 
 >相关 Bug：
 >
