--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.8-jie-rustgo-huan-jing-de-pei-zhi.md
@@ -10,7 +10,7 @@
 
 或者：
 
-```
+```sh
 # cd /usr/ports/lang/rust/ 
 # make install clean
 ```
@@ -27,7 +27,7 @@ $ cargo new greeting
 $ cd greeting
 ```
 ```sh
-$ ee src/main.rs`
+$ ee src/main.rs
 ```
 添加如下文本：
 
