--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.7-jie-python-yu-vscode.md
@@ -2,28 +2,34 @@
 
 ## Python
 
-在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.8 和 Python3.11 属于不同的包。就好像 `llvm11` 和 `llvm13` 那样。
+在 FreeBSD 中，不同的 Python 版本被分开封装。意思是说，Python3.11 和 Python3.13 属于不同的包。就好像 `llvm11` 和 `llvm13` 那样。
 
-但是，就目前的 FreeBSD 13 来说，支持最完整的 Python 是 Python 3.8。`pip` 与 `numpy` 之类的工具只有针对 `py38` 的打包。这也就是 `python3` 这个虚包指向的是 `python38` 的原因。
+但是，就目前的 FreeBSD 14 来说，支持最完整的 Python 是 Python 3.11。`pip` 与 `numpy` 之类的工具只有针对 `py311` 的打包。这也就是 `python3` 这个虚包指向的是 `python311` 的原因。否则你只能使用 ports。
 
 所以想要安装 Python，你需要这样做：
 
 ```sh
-# pkg install python38 py38-pip
+# pkg install python311 py311-pip
 ```
 
 当然你也可以通过：
 
 ```sh
-# pkg install python311
+# pkg install python313
 ```
 
 或者
 
 ```sh
-# cd /usr/ports/lang/python311/ 
+# cd /usr/ports/lang/python313/ 
 # make install clean
 ```
+
+```sh
+# cd /usr/ports/devel/py-pip/ 
+# make install clean
+```
+
 
 之类的命令来要求一个更新的 Python 版本。但是请记住，最新版本的 Python 版本在 FreeBSD 上可能没有那么完全。（需要使用 ports）
 
@@ -37,6 +43,13 @@
 
 ```sh
 # pkg install vscode
+```
+
+或者
+
+```sh
+# cd /usr/ports/editors/vscode/ 
+# make install clean
 ```
 
 然后你就能写代码了。
