--- a/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.4-jie-lan-ya.md
@@ -1,16 +1,10 @@
 # 第 14.4 节 蓝牙
 
-关于蓝牙鼠标的问题请看前文。本文不再赘述。其余问题见参考资料。
-
-由 iwm 驱动的网卡可以安装 `iwmbt-firmware` 这个包来驱动蓝牙。蓝牙走 USB 总线，使用 `usbconfig` 可查看所有设备，包括蓝牙，如 `ugen1.5` 是蓝牙，则： `iwmbtfw -d ugen1.5`。
-
-## 参考资料
-
-- [34.7.蓝牙](https://handbook.bsdcn.org/di-34-zhang-gao-ji-wang-luo/34.7.-lan-ya.html)
+由 iwm 驱动的网卡可以安装 `comms/iwmbt-firmware` 这个包来驱动蓝牙。蓝牙走 USB 总线，使用 `usbconfig` 可查看所有设备，包括蓝牙，如 `ugen1.5` 是蓝牙，则： `iwmbtfw -d ugen1.5`。
 
 ## 无线蓝牙鼠标的设置
 
-> 本文基于 FreeBSD 13.0，并使用罗技 m337。
+本文基于 FreeBSD 13.0，罗技 m337。
 
 ```sh
 # sysrc hcsecd_enable="YES"
@@ -34,4 +28,6 @@ This device provides human interface device services.
 Set it up? [yes]:
 ```
 
-> 注意： logitech m337 配对连接后会自动断开。解决方案：删除`/var/db/bthidd.hids`文件中对应鼠标的`bd_addr`行`xx:xx:xx:xx:xx`，重启 bthidd 服务 `# service bthidd restart`
+> **注意**
+>
+>  logitech m337 配对连接后会自动断开。解决方案：删除 `/var/db/bthidd.hids` 文件中对应鼠标的 `bd_addr` 行 `xx:xx:xx:xx:xx`，重启 `bthidd` 服务 `# service bthidd restart`。
