--- a/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
@@ -196,7 +196,7 @@ Gentoo [自称](https://www.gentoo.org/get-started/about/)是“元发行版（_
 
 另外 Gentoo 的 portage（包管理器）是[纯 Python 语言编写的（92.5 %）](https://github.com/gentoo/portage)，这直接导致了计算依赖的时间延迟：在树莓派 4 上，安装 KDE 5 往往要计算几个小时……即使是在英特尔 i7-6700HQ 处理器上，也要算上个几分钟，如此离谱的包管理器，只此一家，别无分号。你不要以为只算一次就算完事了，你忘了什么叫 **循环依赖** 了吗？每回少则计算三四回，多则七八回，或者压根就操作不了，只能放弃。随着你安装的包越多，你花在包管理器上的时间将明显呈几何增长。
 
-简而言之，Gentoo 用自己的哲学捆绑了用户，简单问题复杂化，自己折磨自己；USE 过于复杂，对于一些常用软件，都经常出现循环依赖问题，破坏系统稳定性，软件安装升级卸载困难。
+简而言之，Gentoo 用自己的哲学捆绑了用户，简单问题复杂化，自己折磨自己；USE 过于复杂，对于一些常用软件，都经常出现循环依赖问题，破坏系统稳定性，软件安装升级卸载困难。如果说 Arch Linux 是滚着滚着就挂了，那么 Gentoo Linux 则是根本不让你滚，你想滚也滚不动。一旦过了几天乃至几星期，你就再也不需要滚动了——你再也动不了任何软件了，无论是卸载、安装还是更新。复杂的 USE，以致于每天都在用 Gentoo 的人也在和这套哲学体系搏斗。Gentoo 社区的日常话题就是依赖问题如何解决。
 
 Gentoo 平台几乎没有任何 Bug 跟踪回馈机制。对于使系统完全没法用的包管理器 app-portage/layman 的相关 Bug，他们只会在七八年后，那个软件被删除时告诉你问题不存在了。或者在 [3 年后](https://bugs.gentoo.org/700744)再回复你。他们这个 Bug 报告平台非常难用。各种搜索不到。虽然看上去是和 FreeBSD 用的是一个平台，但还不如直接谷歌“xxx site:bugs.gentoo.org”。现在你去他的 Bug 报告平台[去搜](https://bugs.gentoo.org/buglist.cgi?quicksearch=app-portage%2Flayman&list_id=7231000)“app-portage/layman”，居然是“Zarro Boogs found.（没有找到任何 Bug）”。~~果然看不到问题就是没有了吗。~~ [高级搜索](https://bugs.gentoo.org/query.cgi)也一样乱七八糟，找不到泛查询。
 
