--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.6-shu-mei-pai-5.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.6-shu-mei-pai-5.md
@@ -2,7 +2,7 @@
 
 >**警告**
 >
->本文不适用于 D0 款以及 16G 内存款。具体可参考 <rpicn.bsdcn.org>
+>本文不适用于 D0 款以及 16G 内存款。具体可参考 <https://rpicn.bsdcn.org>
 
 经过测试，树莓派 5 8G，使用 [UEFI](https://github.com/worproject/rpi5-uefi)、FreeBSD 15.0（测试用例 `FreeBSD-15.0-CURRENT-arm64-aarch64-20240628-14fee5324a9b-270986-memstick.img.xz`）、支持从存储卡、USB 设备、m2 扩展板（微雪的 [PCIe_TO_M.2_HAT+](https://www.waveshare.net/wiki/PCIe_TO_M.2_HAT+)）的 m2 NVme SSD 启动，后者亦可兼容 PCIe 3.0 速度。但是网卡等没驱动（可使用 USB 网卡，具体型号参考第一章相关）。风扇由固件控制，所以默认会一直转，不会停。HDMI 正常。USB 2/3 均正常。经过测试 KDE5 可以正常输出到 HDMI 显示器上。
 
