--- a/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/di-18.3-jie-shi-yong-pei-zhi.md
@@ -33,7 +33,7 @@ PasswordAuthentication yes # 设置是否使用口令验证。
 # tzsetup
 ```
 
-要选择 `No`-->`5  Asia `-->`9  China `-->`1 Beijing Time `-->` Does the abbreviation `CST' look reasonable? `--> 选择 `Yes`。
+要选择 `No`-->`5  Asia `-->`9  China `-->`1 Beijing Time `-->` Does the abbreviation CST' look reasonable? `--> 选择 `Yes`。
 
 
 **时间设置**
