--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -2,37 +2,7 @@
 
 ## 框架
 
-```mermaid
-stateDiagram
-  direction LR
-  state exporter {
-    direction LR
-    node_exporter
-    jail_exporter
-other_exporter:...
-}
-state storage {
-direction LR
-本地存储
-influxdb
-other_storage:其它远程存储...
-}
-state alert {
- direction LR
-    电子邮件
-    Slack频道
-other_alert:...
-}
-prometheus --> grafana :显示
-prometheus --> storage:存储
-storage --> prometheus:提取
-exporter --> prometheus :采集(pull)
-pushgateway --> prometheus :采集(pull)
-临时或批量作业 --> pushgateway :主动推送(push)
-prometheus --> Alertmanager :告警触发
-Alertmanager --> alert :告警
-
-```
+![框架](../.gitbook/assets/mermaid.png)
 
 prometheus 监控部署如图
 
