--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -175,7 +175,7 @@ scrape_configs:
 - 修改 prometheus 启动配置,并重启
 
 ```sh
-# sysrc prometheus_args="--web.config.file='/usr/local/etc/pro（Subject Alternative Name）metheus_webconfig.yml'"
+# sysrc prometheus_args="--web.config.file='/usr/local/etc/prometheus_webconfig.yml'"
 # service prometheus restart
 ```
 
@@ -192,7 +192,7 @@ scrape_configs:
 -  编辑 `/usr/local/etc/node_exporter_webconfig.yml`,格式如下
 
 ```yml
-basic_auth_users:（Subject Alternative Name）
+basic_auth_users:
   node_exporter_user: $2a$10$XoJoz.x.m9FTEbaTF3hBsehE9C8zCWjCQUHkSL0Isk53UnUTjR4hi
 ```
 
@@ -261,7 +261,7 @@ openssl x509 -req -in prometheus.csr -CA ca.crt -CAkey ca.key -CAcreateserial -o
 
 #### 生成 node_exporter 端证书
 
-1. 创建一个 OpenSSL 配置文件，以便在生成证书时指定 SAN。
+1. 创建一个 OpenSSL 配置文件，以便在生成证书时指定 SAN（Subject Alternative Name）。
 
 创建一个文件，比如叫 san.cnf，内容如下：
 
