--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -21,7 +21,19 @@ prometheus 监控部署如图
 1. 安装 prometheus
 
 ```sh
-# pkg install prometheus
+# pkg install prometheus2
+```
+
+或者：
+
+```
+# cd /usr/ports/net-mgmt/prometheus2/ 
+# make install clean
+```
+
+服务项：
+
+```sh
 # service prometheus enable
 # service prometheus start
 ```
@@ -30,6 +42,18 @@ prometheus 监控部署如图
 
 ```sh
 # pkg install grafana
+```
+
+或者：
+
+```sh
+# cd /usr/ports/www/grafana/ 
+# make install clean
+```
+
+服务项：
+
+```sh
 # service grafana enable
 # service grafana start
 ```
@@ -38,6 +62,18 @@ prometheus 监控部署如图
 
 ```sh
 # pkg install node_exporter
+```
+
+或者：
+
+```sh
+# cd /usr/ports/sysutils/node_exporter/ 
+# make install clean
+```
+
+服务项：
+
+```sh
 # service node_exporter enable
 # service node_exporter start
 ```
@@ -45,7 +81,7 @@ prometheus 监控部署如图
 ## 配置
 
 1. prometheus
-prometheus 的主要配置文件是 `/usr/local/etc/prometheus.yml`,在其中找到：
+   prometheus 的主要配置文件是 `/usr/local/etc/prometheus.yml`,在其中找到：
 
 ```yml
 scrape_configs:
@@ -79,7 +115,7 @@ scrape_configs:
       - targets: ["localhost:9100"]
 ```
 
-重启 prometheus， 
+重启 prometheus，
 
 ```sh
 service prometheus restart
@@ -99,7 +135,7 @@ Graph 页，可以查看各项监控指标，支持表达式,例：
 
 2. grafana
 
-浏览器打开 grafana 的 web 页（默认端口3000），默认用户名admin,密码admin，如下图可切换中文界面
+浏览器打开 grafana 的 web 页（默认端口 3000），默认用户名 admin,密码 admin，如下图可切换中文界面
 
 ![grafana 切换中文界面](../.gitbook/assets/grafana_setting_zh_language.png)
 
@@ -123,7 +159,6 @@ Graph 页，可以查看各项监控指标，支持表达式,例：
 
 ![建仪表盘 5](../.gitbook/assets/grafana_dashboard_create_5.png)
 
-
 ## 安全认证
 
 默认情况下，只有登录 grafana 需要密码。各部件间以 http 连接，如 `node_exporter` 可以通过访问`http://ip:9100/` 直接获取所以监控数据，prometheus 可以通过 `http://ip:9090/` 直接访问。非实验环境中直接暴露这些信息是不安全的，所以安全认证是必要的。
@@ -144,7 +179,7 @@ basic_auth_users:
 ```sh
 # pkg install sttr
 $ sttr bcrypt prometheuspassword
-$2a$10$mxpc1PdYgOwvGepNtCuBKO6RXVUzLDg8feOvuz6szOsBa9M28ECfe% 
+$2a$10$mxpc1PdYgOwvGepNtCuBKO6RXVUzLDg8feOvuz6szOsBa9M28ECfe%
 ```
 
 这里的 `%` 只是终端里的输出在没有换行符时出现的，忽略即可。
@@ -189,7 +224,7 @@ scrape_configs:
 
 下面以 node_exporter 为例
 
--  编辑 `/usr/local/etc/node_exporter_webconfig.yml`,格式如下
+- 编辑 `/usr/local/etc/node_exporter_webconfig.yml`,格式如下
 
 ```yml
 basic_auth_users:
@@ -218,7 +253,7 @@ scrape_configs:
     basic_auth:
       username: tome
       password: jake
-      
+
 - job_name: "node_exporter_local"
     static_configs:
       - targets: ["localhost:9100"]
@@ -432,7 +467,7 @@ alert 指定告警的名字。
 
 expr 指定告警触发条件表达式，这里是名为 dox 的 jail，如果没有 jail id ，则触发告警。
 
-for 指触发告警的等待时间，这里是5分钟，即如果在5分钟内得到解决，则不发送告警
+for 指触发告警的等待时间，这里是 5 分钟，即如果在 5 分钟内得到解决，则不发送告警
 
 4. 在 prometheus 配置文件中引入规则文件,并连接 alertmanager
 
@@ -460,7 +495,7 @@ service alertmanager restart
 
 6. 测试
 
-`jail -r dox` 关闭 jail，触发规则，5分钟后发送告警邮件。`jail -c dox` 开启 jail，告警规则重置为非活动。
+`jail -r dox` 关闭 jail，触发规则，5 分钟后发送告警邮件。`jail -c dox` 开启 jail，告警规则重置为非活动。
 
 ## 远程存储
 
@@ -534,6 +569,7 @@ select * from jail_id
 ```
 
 ## 参考
+
 [exporter 配置参考](https://github.com/prometheus/exporter-toolkit/blob/master/docs/web-configuration.md)
 
 [prometheus 配置参考](https://github.com/prometheus/prometheus/blob/main/docs/configuration/configuration.md)
