--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -18,7 +18,7 @@ prometheus 监控部署如图
 
 ## 安装基本工具
 
-1. 安装 prometheus
+### 安装 prometheus
 
 ```sh
 # pkg install prometheus2
@@ -31,14 +31,14 @@ prometheus 监控部署如图
 # make install clean
 ```
 
-服务项：
+#### 服务项
 
 ```sh
 # service prometheus enable
 # service prometheus start
 ```
 
-2. 安装 grafana
+### 安装 grafana
 
 ```sh
 # pkg install grafana
@@ -51,14 +51,14 @@ prometheus 监控部署如图
 # make install clean
 ```
 
-服务项：
+#### 服务项
 
 ```sh
 # service grafana enable
 # service grafana start
 ```
 
-3. 安装 node_exporter
+### 安装 node_exporter
 
 ```sh
 # pkg install node_exporter
@@ -71,7 +71,7 @@ prometheus 监控部署如图
 # make install clean
 ```
 
-服务项：
+#### 服务项
 
 ```sh
 # service node_exporter enable
@@ -80,7 +80,7 @@ prometheus 监控部署如图
 
 ## 配置
 
-1. prometheus
+### prometheus
    prometheus 的主要配置文件是 `/usr/local/etc/prometheus.yml`,在其中找到：
 
 ```yml
@@ -133,7 +133,7 @@ Graph 页，可以查看各项监控指标，支持表达式,例：
 
 稍微熟悉一下界面，就可以发现查看数据，查看 panel，等并不方便，这时就要用到 grafana,以更友好的方式展示数据。
 
-2. grafana
+### grafana
 
 浏览器打开 grafana 的 web 页（默认端口 3000），默认用户名 admin,密码 admin，如下图可切换中文界面
 
@@ -568,7 +568,7 @@ select * from jail_id
 1739497373285000000 jail_id  192.168.0.100:9452 jail_exporter prometheus 1
 ```
 
-## 参考
+## 参考文献
 
 [exporter 配置参考](https://github.com/prometheus/exporter-toolkit/blob/master/docs/web-configuration.md)
 
