--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -8,13 +8,13 @@ prometheus 监控部署如图
 
 - prometheus 是整个监控的中心
 - grafana 用于图表化显示监控数据
-- exporter 用于数据采集，prometheus 支持多种 exporter，可用 `pkg search -L name -D prometheus` 查找
+- exporter 用于数据采集；prometheus 支持多种 exporter：可用 `pkg search -L name -D prometheus` 查找
 - alertmanager 用于处理警告
 - prometheus 可以使用多种远程存储
 
-注意：prometheus､grafana､exporter alertmanager 等都不需要在同一台机器或相同系统上，exporter 安装在被监控的结点上。以下 prometheus，grafana，alertmanager 安装在同一机器上，exporter 根据需要来。
+注意：prometheus､grafana､exporter alertmanager 等都不需要在同一台机器或相同系统上，exporter 安装在被监控的结点上。以下 prometheus、grafana、alertmanager 安装在同一机器上，exporter 根据需要来。
 
-另：如果遇到服务开启问题先查香 `/var/log/daemon.log`。配置文件大部分为 yaml 格式，注意缩进，如果是 prometheus，可以用 `promtool check` 先检查正确与否。
+另：如果遇到服务开启问题先查香 `/var/log/daemon.log`。配置文件大部分为 yaml 格式，注意缩进。如果是 prometheus，可以用 `promtool check` 先检查正确与否。
 
 ## 安装基本工具
 
@@ -97,7 +97,7 @@ scrape_configs:
 
 `scrape_configs` 是用于配置采集数据的结点，这里默认的 `targets: ["localhost:9090"]` 是 prometheus 服务本身。
 
-现在增加用于监控主机信息的 `node_exporter` ,在 `scrape_configs` 下写入如下：
+现在增加用于监控主机信息的 `node_exporter`，在 `scrape_configs` 下写入如下：
 
 ```ini
 scrape_configs:
@@ -115,27 +115,27 @@ scrape_configs:
       - targets: ["localhost:9100"]
 ```
 
-重启 prometheus，
+重启 prometheus：
 
 ```sh
 service prometheus restart
 ```
 
-这样就向 prometheus 增加了一个新的监控节点,任务名是 `node_exporter_local`。别外 `[]` 中可以加入多个主机。
+这样就向 prometheus 增加了一个新的监控节点，任务名是 `node_exporter_local`。别外 `[]` 中可以加入多个主机。
 
-prometheus 提供 web 界面(默认端口号：9090），如下，查看监控目标信息：
+prometheus 提供 web 界面(默认端口号：9090），查看监控目标信息如下：
 
 ![监控目标](../.gitbook/assets/prometheus_target.png)
 
-Graph 页，可以查看各项监控指标，支持表达式,例：
+Graph 页：可以查看各项监控指标，支持表达式。例如：
 
 ![空闲内存示例](../.gitbook/assets/prometheus_example_node_memory_free.png)
 
-稍微熟悉一下界面，就可以发现查看数据，查看 panel，等并不方便，这时就要用到 grafana,以更友好的方式展示数据。
+稍微熟悉一下界面，就可以发现查看数据、查看 panel 等并不方便。这时就要用到 grafana，以更友好的方式展示数据。
 
 ### grafana
 
-浏览器打开 grafana 的 web 页（默认端口 3000），默认用户名 admin,密码 admin，如下图可切换中文界面
+浏览器打开 grafana 的 web 页（默认端口 `3000`）：默认用户名 `admin`，密码 `admin`。如下图可切换中文界面
 
 ![grafana 切换中文界面](../.gitbook/assets/grafana_setting_zh_language.png)
 
@@ -161,20 +161,20 @@ Graph 页，可以查看各项监控指标，支持表达式,例：
 
 ## 安全认证
 
-默认情况下，只有登录 grafana 需要密码。各部件间以 http 连接，如 `node_exporter` 可以通过访问`http://ip:9100/` 直接获取所以监控数据，prometheus 可以通过 `http://ip:9090/` 直接访问。非实验环境中直接暴露这些信息是不安全的，所以安全认证是必要的。
+在默认情况下，只有登录 grafana 需要密码。各部件间以 http 连接：如 `node_exporter` 可以通过访问 `http://ip:9100/` 直接获取所以监控数据；prometheus 可以通过 `http://ip:9090/` 直接访问。非实验环境中直接暴露这些信息是不安全的，所以安全认证是必要的。
 
 ### 基本认证
 
 #### prometheus 的 basic_auth
 
-- 编辑 `/usr/local/etc/prometheus_webconfig.yml`,格式如下
+- 编辑 `/usr/local/etc/prometheus_webconfig.yml`，格式如下
 
 ```yml
 basic_auth_users:
   prometheususer: $2a$10$mxpc1PdYgOwvGepNtCuBKO6RXVUzLDg8feOvuz6szOsBa9M28ECfe
 ```
 
-第二行中，冒号前为用户名，冒号后为密码的 bcrypt 哈希值，这里使用了 sttr 工具生成，也可以用其它工具,这里假设密码为 `prometheuspassword`:
+第二行中：冒号前为用户名，冒号后为密码的 bcrypt 哈希值——这里使用了 sttr 工具生成，也可以用其它工具,这里假设密码为 `prometheuspassword`:
 
 ```sh
 # pkg install sttr
@@ -186,7 +186,7 @@ $2a$10$mxpc1PdYgOwvGepNtCuBKO6RXVUzLDg8feOvuz6szOsBa9M28ECfe%
 
 - 编辑 `/usr/local/etc/prometheus.yml`
 
-在 prometheus 的配置下加入下面三行，注意缩进
+在 prometheus 的配置下加入下面三行，注意缩进：
 
 ```yml
 scrape_configs:
@@ -207,7 +207,7 @@ scrape_configs:
       - targets: ["localhost:9100"]
 ```
 
-- 修改 prometheus 启动配置,并重启
+- 修改 prometheus 启动配置，并重启
 
 ```sh
 # sysrc prometheus_args="--web.config.file='/usr/local/etc/prometheus_webconfig.yml'"
@@ -224,14 +224,14 @@ scrape_configs:
 
 下面以 node_exporter 为例
 
-- 编辑 `/usr/local/etc/node_exporter_webconfig.yml`,格式如下
+- 编辑 `/usr/local/etc/node_exporter_webconfig.yml`，格式如下
 
 ```yml
 basic_auth_users:
   node_exporter_user: $2a$10$XoJoz.x.m9FTEbaTF3hBsehE9C8zCWjCQUHkSL0Isk53UnUTjR4hi
 ```
 
-- 修改 node_exporter 启动配置,并重启
+- 修改 node_exporter 启动配置，并重启
 
 ```
 # sysrc node_exporter_args="--web.config.file='/usr/local/etc/node_exporter_webconfig.yml'"
@@ -298,7 +298,7 @@ openssl x509 -req -in prometheus.csr -CA ca.crt -CAkey ca.key -CAcreateserial -o
 
 1. 创建一个 OpenSSL 配置文件，以便在生成证书时指定 SAN（Subject Alternative Name）。
 
-创建一个文件，比如叫 san.cnf，内容如下：
+创建一个文件，比如叫 san.cnf。内容如下：
 
 ```ini
 [ req ]
@@ -335,7 +335,7 @@ openssl x509 -req -in node_exporter.csr -CA ca.crt -CAkey ca.key -CAcreateserial
 
 #### 配置 prometheus 和 node_exporter
 
-编辑 `/usr/local/etc/node_exporter_webconfig.yml` ,如下：
+编辑 `/usr/local/etc/node_exporter_webconfig.yml`，如下：
 
 ```yml
 tls_server_config:
@@ -397,11 +397,11 @@ num=$(ps aux |awk 'NR>1 {print $8}'|grep Z|wc -l)
 echo "process_zombie $num"|curl --data-binary @- http://10.0.55.1:9091/metrics/job/check_processes
 ```
 
-第一行用于检查僵尸进程数，第二行向 pushgateway 发送僵尸进程计数。（注意：发送的数据每行必须`"\n"`结尾
+第一行用于检查僵尸进程数，第二行向 pushgateway 发送僵尸进程计数。（注意：发送的数据每行必须 `"\n"` 结尾
 
 ## 告警
 
-prometheus 告警依赖 alertmanager 组件。这里示例以 jail_exporter 为例（安装配置较为简单，参见上文，不再说明,另需要`/boot/loader.conf`中写入`kern.racct.enable=1`,以开启系统记帐功能）。
+prometheus 告警依赖 alertmanager 组件。这里示例以 jail_exporter 为例（安装配置较为简单，参见上文，不再说明。另需要 `/boot/loader.conf` 中写入 `kern.racct.enable=1`，以开启系统记帐功能）。
 
 1. 安装：
 
@@ -463,13 +463,13 @@ groups:
       description: "jail dox is down"
 ```
 
-alert 指定告警的名字。
+`alert` 指定告警的名字。
 
-expr 指定告警触发条件表达式，这里是名为 dox 的 jail，如果没有 jail id ，则触发告警。
+`expr` 指定告警触发条件表达式，这里是名为 dox 的 jail。如果没有 jail id ，则触发告警。
 
-for 指触发告警的等待时间，这里是 5 分钟，即如果在 5 分钟内得到解决，则不发送告警
+`for` 指触发告警的等待时间，这里是 5 分钟。即如果在 5 分钟内得到解决，则不发送告警
 
-4. 在 prometheus 配置文件中引入规则文件,并连接 alertmanager
+4. 在 prometheus 配置文件中引入规则文件，并连接 alertmanager
 
 ```yml
 # Alertmanager configuration
