--- a/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/17.10.prometheus.md
@@ -186,7 +186,15 @@ $2a$10$mxpc1PdYgOwvGepNtCuBKO6RXVUzLDg8feOvuz6szOsBa9M28ECfe%
 
 - 编辑 `/usr/local/etc/prometheus.yml`
 
-在 prometheus 的配置下加入下面三行，注意缩进：
+在 prometheus 的配置下加入下面三行，
+
+```
+    basic_auth:
+      username: prometheususer
+      password: prometheuspassword
+```
+
+注意缩进，完整示例：
 
 ```yml
 scrape_configs:
