--- a/di-16-zhang-fu-wu-qi/di-16.9-jie-webmin.md
+++ b/di-16-zhang-fu-wu-qi/di-16.9-jie-webmin.md
@@ -127,7 +127,7 @@ Webmin -> Change Language and Theme，在 `Change Language and Theme` 的 `Webmi
 
 ## 使用
 
-下面打开浏览器输入 `https://ip:10000`，如 `https://192.168.123.157:10000`
+下面打开浏览器输入 `https://localhost:10000`（本机浏览），若其他机器浏览，可输入 ip 如 `https://192.168.123.157:10000`。
 
 回车后如浏览器提示不安全，选择“继续前往”即可，之后会出现 Webmin 登录界面。
 
