--- a/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
+++ b/di-19-zhang-wen-xue-gu-shi/di-19.2-jie-linux-bai-ju-yi-ding-bo-freebsd-da-bai-ju.md
@@ -1,255 +1,5 @@
-# 第 19.2 节 Git&Linux 败局与 FreeBSD 败局
+# 第 19.2 节 Linux 败局与 FreeBSD 败局
 
-## Git 大败局
-
-Git 用的越久觉得有欠缺的地方越多，设计就是反人类。我恐怕他自己也不知道设计的什么。和那套 gcc 语法一样反人类。
-
-Git 的合并就是一例，一件事得干三次，add commit merge，有什么意义？命令得允许缩写。
-
-Git 有一大堆乱七八糟没人能说清的东西，Git 就和 Linux 一样，全是缺陷。我知道有这个用，但是什么意思呢，没人说得清。
-
----
-
-- 得能支持各种代理，而且默认情况下跟随系统代理。
-- 需要兼容 Windows，和 bash 解耦合。加入 NTFS 兼容设置，默认开启，凡是 NTFS 下禁止事项均要实现，比如不要往文件名里加英文逗号，应该以代替参数自动转换；奇葩软链接改用类似子模块的方式。提高平台兼容性。得支持 gbk，windows 下都是乱码。甚至没有一款全功能的 GUI 软件。
-- 要简单易懂。不要整一堆没人看懂的什么 merge rebase 还有一堆乱七八糟的命令。rebase merge  我至今没见过一个人说得清楚。要重新设计语法增加快速回退，现在回退还分四个参数，hard soft mix keep 什么的：这些乱七八糟参数谁知道到底什么意思？
-- 优化二进制文件存储方式。Git 不只保存差异，他每次改都保留一份原本。他现在 1M 的文本改一次，只加一个逗号，也重新多一个 1M 的记录。改十次就是多 10M 记录文件。**Git 的差异存储是依赖于 gc 的，而 gc 是伪功能。**
-- 版本控制工具自己的数据要能自动清除和压缩。Git 的 `gc` 就是假的。**除非整个项目只有你一个人。** 你不知道的是，任何二进制文件在 Git 项目中根本移不出去，除非把整个项目下载下来，删掉旧仓库再新建再把文件放回去。但是这样没意义，版本控制没了。任何删除二进制和精简的项目都没用。你以为你能删掉，你什么也删不掉。二进制放进去就永远也删不掉了，你本地可以，但是你推不到 main。原理很简单啊，你这边删了， 别人一合并，就回来了。而且你只能改你的分支，PR、tag 的分支你根本动不了。除非你删掉所有 PR tag。删了还算什么版本控制。而且 Github PR  是不能删除的。 Github 网站管理员要你列出删除原因，你得符合，你说太大了你看他理你不 ~~我试过不搭理我~~。BFG Repo Cleaner、git filter-repo 之类的也是没用的东西。你无法重写已经 fork 和 PR 的部分。推上去拉回来你就发现大小压根没变。你重写了，删了，他 fork 一推回来就完啦。**只要你用 GitHub 并且有 pull 你就压根 gc 不了也删不了任何提交错误的机密信息。 gc 也是个骗局，只要你有任何分支或者 tag 你就没办法 gc。**
-- 提交要学 SVN，用数字表示版本。但是也允许 sha 索引。应该按数字排序提交 ，整一堆 sha256 人类不可读。每次还得反查看提交时间。SVN 比大小就知道谁先谁后 Git 的提交是按 sha256 判断的。比如下载东西可以指定版本下载，Git 的你知道第 103 次提交叫什么吗？怎么拉取？SVN 直接 checkout 103。
-- 要支持断点续传。从 Git 不支持断点续传我就知道他其他设计也是反人类。
-- 要支持索引目录变化。竟然默认不允许仅新建目录？
-- 要用 BSD 许可证或者更宽容的许可证。
-- 不要用 python
-- 根据仓库大小自动执行推荐性参数，现在的 Git 仓库一大就要东调西调。
-- 支持备份同步功能。Git 的备份一直很麻烦。你只能自己建立一个脚本定时拉取（拉取裸仓库吗？这对吗？）这是防止 GitHub 云端丢失，我找了很多都没有能用的。Gitlab 是可以备份，要收费。就是定时拉取到本地，做备份用，即镜像。
-- 支持 SVN 的特定目录加密功能 。用 Git 就等于全开源了，得允许加密访问， 每个人开发一部分。
-- 拉取效率太低，速度太慢。Git 的拉回来再解压也是无语，太吃 CPU 了，应该允许不解压直接拉的参数。git log 写的也是不是给人看的 。Git 的日志全是 Merge branch 'XXX' of xxx into XXX”
-- 要允许 git checkout 单个目录或文件。多人协作也是伪分布式，应该只允许拉单个目录和文件，别人改其他地方关我什么事。
-- 要支持自动同步上游——子模块也一样。
-- 要允许命令行密码提交。
-- 现在的个人信息就名字和邮件，明显不够用，应该做冗余设计。
-
-## 各大 GNU/Linux 发行版缺陷对比
-
-我发现一件事：既然 BSD 是 UNIX 直接后裔。那么许多概念只是被 Linux 鸠占鹊巢罢了。常见概念真正的提出者其实是 BSD。比如“容器”的概念（可参考[什么是 Linux 容器？](https://www.redhat.com/zh/topics/containers/whats-a-linux-container)）、“发行版”的概念（参见[《FreeBSD：原始操作系统发行版的火炬传承者》](https://book.bsdcn.org/fan-yi-wen-zhang-cun-dang/2025-nian-1-yue/bsd)）、Gentoo Ports 的方法。乃至于开源的理念，也是 BSD 首先提出的，世界上第一款开源许可证就是 BSD 许可证。
-
-由于 GNU 开源运动的大规模开展和 Linux 的蓬勃发展，大部分人对于开源的理解被囿于 GPL 与 Linux，无法走进 FreeBSD 这片 BSD 世界。某些自诩为 **开源** 社团的组织，其实际活动主要集中于 Linux，鲜有超越这一范畴的探索。为此特撰写本文。
-
-### 为何不能选择 Linux 桌面操作系统？
-
-#### Linux 并不自由
-
-> **思考题**
->
-> “我发现看似纷繁复杂的 Linux 发行版，仅仅是一个假象罢了。他们甚至连任何自主决策权都没有。上游 systemd，他们就也 systemd（不这样的话，你没有任何第三方软件可用了，而后果就是你本身也被消灭了）Linux 发行版从未真正存在过。”
->
-> > ①Linux 发行版到底谁说了算？或者说，究竟有没有这么一个人或团体，是他说了算？
-> >
-> > ②“自由软件”的真正精神就和本书一样是复制粘贴吗？
-> >
-> > ③ 结合全文及你的经历，评析“Linux 发行版从未真正存在过”。
-
-看似你有很多发行版可选，还能对发行版的种种评头论足，但是你其实始终没得选。你做出的选择看似是你自己做出的，但是选项是别人给出的。你也有能力自己维护自己的发行版，但是你究竟维护着什么？什么也没有。这是事实。
-
-> **思考题**
->
-> 常见的 Linux 发行版和所谓的国产操作系统，究竟在维护着什么？文件系统他们不维护，内核和 glibc 他们不维护，Systemd 他们不维护，桌面他们不维护，其他第三方软件他们也不维护，甚至就连包管理器和软件源他们也都不维护。他们对上述软件/工具既不维护也不测试，更不会去打补丁，撰写文档。
->
-> > ① 如果去掉文件系统，去掉 Linux 内核，去掉 Shell，去掉 Systemd，去掉桌面，再去掉包管理器，去掉任何第三方软件，这些 Linux 发行版还能剩下什么？
-> >
-> > ② 如果把上面都去掉的东西组合起来，声称为一个发行版，该发行版和普通的 Linux 发行版有什么区别？
-> >
-> > > ③ 他还是原来的发行版吗？如果不是，是在去掉哪个组件后不是的？如果是，为什么，他的哪个部分真正属于原来的发行版？
-
-但是，Linux 真的自由吗？什么是 Linux？什么是自由？
-
-Linus 将开发者从维护名单移除出去，看似只是文本改动，对开发毫无影响。其实不然，我以前说过，Linux 的开发相当地封闭，并且由 Linus 一人独裁。这些名单中的人名和电子邮件，是通过脚本进行检索的，当你想要贡献时，你必须运行脚本看看你能把你的补丁发给谁。而现在，都删掉了，就没人了。岂不是荒唐。你移除的是别人的名字，但其实伤害的是 Linux kernel 项目自己。
-
-仅从许可协议上强制要求开源，也谈不上自由可言。商业公司无法将自己的产品融合进 Linux 内核（聪明的红帽选择使用 systemd 控制整个 Linux 社区）。无法复用代码，被迫重复造轮子编写一模一样的代码。在某种意义上，是 Linux 迫使商业公司变得更不诚信，更不可信，败坏了社会道德与社会风气；也被迫造成了大量的资源浪费，破坏着人类赖以生存的和谐环境。
-
-#### 不再拥有的的稳定性
-
-自 Systemd 引入以降，Linux 就显而易见地不怎么稳定了。日常使用都经常能遇到 Systemd 引发的故障。Systemd 的 Bug 几辈子也修不完，并且由于缺乏代码审查，代码质量极差，还在不断地引入新 Bug。但 Systemd 仍在不断地接管系统组件。Systemd 接管地越多，Linux 就越不稳定。Linux 早已将“一切皆文件”的 Unix 哲学弃之如敝屣。
-
-并且目前常见主流发行版所占的系统资源同 Windows 相比，亦只多不少。而现今那些宣称轻量级的发行版，完全就是在搞苦难哲学，根本不足以满足日常使用需求。
-
-他们所强调的稳定性只是黑白的 tty 界面罢了。在日常使用的图形界面下，Linux 的稳定性还不如 Windows 95。起码 Windows 已经做到了当图形界面崩溃时还能调出来任务管理器结束这一切。而 Linux 往往无能为力，只能强制断电——不信你安装国产操作系统 UOS 专业版试试。而一旦强制断电，你就又掉入了下一节的坑底。
-
-#### 每天都需要 `fsck` 的文件系统
-
-Linux 的文件系统相当脆弱。如果你像使用 Windows 那样使用 Linux，等待你的将会是 `You are in emergency mode`、`BusyBox （initramfs）` 或者 `grub rescue>`。你几乎每天都在 `fsck`。这也是他们宣传 Linux 不关机（并要求 UPS）的原因所在，因为压根没法关机。你以为他长期不关机是系统稳定，其实恰恰相反。
-
-#### 并不可靠的安全性与伪开源
-
-几乎没有一款 Linux 发行版可以做到默认安全（secure by default）。Linux 系统的核心代码不是彻底开源的，里面充斥着各种二进制和代码混淆。对用户完全是黑箱。这意味着你的 Linux 系统只是看起来漏洞很少罢了。Linux 虽然有着各种各样的不同版本，但是其采用的所有组件发行版都无力维护——哦，包管理器不算。供应链攻击（如 CVE-2024-3094）始终是 Linux 安全性的阿喀琉斯之踵。大多数发行版的安全更新都相当滞后——如果你使用的是某不知名发行版。大家没有想到的一个问题就是，这些用于管理读写权限控制、带保护的子系统、审计跟踪、核心授权的安全措施的模块或机制本身就是有问题的呢？我们至今仍未知道 Linux 内核里面的由美国国家安全局（NSA）开发的 SELinux 究竟有没有后门？
-
-由于 Linux 发行版的海量应用，共同故障点的问题将会越发凸显。
-
-#### 破坏性的软件包管理机制
-
-在 Linux 里你可以卸载一切不想安装在系统里的预置应用。问题在于，“所有”软件都是“预置应用”。Linux 缺乏基本系统的概念。就会出现一系列违反直觉的事情——卸载包管理器本身、卸载 Glibc、卸载 Linux 内核、卸载 Grub。
-
-Linux 的包管理器做不到纯净卸载，总是会留下各种配置文件在各种目录到处乱放。由于 Linux 发行版无力维护软件包的配置文件应该放哪儿这种简单问题，即使安装后，你也不得不用 `find` 命令满地球找，看看他这个玩意的配置文件到底在哪儿？！
-
-依赖地狱是老生常谈的话题了。这一切根源于上面提及的 Linux 缺乏基本系统的概念。
-
-为什么几乎所有的 Linux 软件都是动态库？而问题在于 Linux 的动态库根本就不能叫做动态库。应该叫“人一次也不能踏入同一条河流库”。每分每秒都在发生着破坏性变动。Windows 也频繁使用动态库 `.dll`，也会出现 dll 错误，但多是因为盗版系统或用户自身原因造成。但是 Windows 能兼容三十年前设计的动态库，这是为什么？
-
-#### 无法离线使用
-
-在离线或内网情况下，Linux 系统基本上就毫无用处。由于复杂的依赖，几乎无法离线安装任何软件。由于缺乏基本系统的设计，也根本无法实现原子更新。也根本不存在像 Windows 的那种独立的补丁包或 Update 补丁包集合，这些在 Linux 下是根本无法做到的。而且由于上述问题，往往造成局域网的 Linux 根本得不到任何安全更新与系统升级的可能性，反而使得 Linux 成为了最不安全的操作系统。他们还津津乐道地说旧就是稳定。系统组件亦是由无数开源软件组成的。系统级的开源软件出现漏洞也是频频发生的事情。这时候想要升级，是不可能的一件事。比如 glibc、python。一般来说，你选择了什么 Linux，你就已经被锁死到了这个 Linux 默认的开源软件的版本了。你既得不到安全更新，也得不到功能更新。在内网部署 Linux 就是一件苦难哲学的实例。
-
-#### 社区极不友好
-
-Linux 社区都是一群热衷于搞苦难哲学的人，不屑于回答你任何简单的问题——即使他们自己不会。Linux 社区既不团结亦非友好——不信你自己试试。更多请参见其他相关文章，不再赘述。他们善于在大团体中结成各个小团体，是你永远也融不进的圈子。从充斥着各种学历攀比，再到每天像机器人一样在群里发各种看似高深莫测实则自己也狗屁不懂的技术科普，以及无穷尽地虚伪的表情包背后隐藏的技术歧视与傲慢随偏见。你只是他们娱乐的玩具而已，连群宠都算不上。
-
-##### 参考文献
-
-- [给每个人的 Linux 桌面入门指南（一）—— 为何选择 Linux 桌面操作系统？](https://sspai.com/post/64499)
-
-
----
-
-请你走进 Linux，一片真实的 Linux 世界。
-
-以下分析可能会触及一些人的灵魂，但这都是基于实际使用经验的真实反馈。
-
-### Ubuntu
-
-[Ubuntu 是著名的内部错误（internal error）发行版](https://www.google.com/search?q=internal+error+ubuntu+site:askubuntu.com)有些人为此争辩“那是 Ubuntu 太谦虚了，[他把不属于自己的报错也揽到自己身上](https://linux.cn/article-4660-1.html)”，但无可辩驳的是 Ubuntu 基于 Debian 的 SID（不稳定版本的代号），本身稳定性是没有保证的（无论普通版本还是 LTS）：一是内部错误，二是无法跨大、小版本升级（必挂，即使纯净系统也大概率会挂）
-
-最近在 VMware Workstation 17 Pro 虚拟机上测试了 Ubuntu 24.04 LTS（伦敦当地时间 2024 年 4 月 25 日发布），可以说一代不如一代，安装的时候就开始不断地报错，并且 Bug 不断，窗口溢出、找不到鼠标光标、定位不到输入框……费劲安装后，开机更是各种内部错误接连不断（掐表数过了大概每 10 分钟会有 1 次）
-
-> ![Ubuntu 24.04 内部错误](../.gitbook/assets/nbcw.jpg)
->
-> ```bash
-> ykla@ykla-ubuntu:~$ cat /etc/debian_version
-> trixie/sid #trixie 即 Debian 13。但是在当前时间点，最新 stable 版本是 Debian 12 bookworm
-> ykla@ykla-ubuntu:~$ cat /etc/lsb-release
-> DISTRIB_ID=Ubuntu
-> DISTRIB_RELEASE=24.04
-> DISTRIB_CODENAME=noble
-> DISTRIB_DESCRIPTION="Ubuntu 24.04 LTS"
-> ```
-
-### Fedora
-
-Fedora 俗称“[地沟油](https://zh.moegirl.org.cn/zh-hans/Fedora%E5%A8%98)”，是基于 RHEL 的上游系统，我愿称其为小白鼠发行版，其发行的根本目的是为了测试 RHEL 系统的新设计和新架构（[该社区由 RedHat 红帽公司完全控制](https://docs.fedoraproject.org/en-US/council/)），待稳定后迁移到 RHEL。
-
-稳定性是绝对谈不上的，无法跨大版本升级（必挂，除非纯净系统），意味着你基本上每几个月就必须完全重装一次系统以及配置你的环境。在这里得不到稳定性和长期支持。与 deb 系不同，即使是细微差别的大版本，软件源亦无法通用（依赖变动极为频繁）这个系统没有事实上的稳定版，所有版本和 [nightly](https://openqa.fedoraproject.org/nightlies.html) 版本无差别。这个系统的稳定性堪比 ArchLinux。反正不如 Ubuntu：具体测试就是把屏幕保护和锁屏休眠都关掉，然后开始编译软件，比如 Chromium，没几个小时整个 Fedora 系统就会白屏卡死，而 Ubuntu 一点事没有。
-
-由此可见 Linux 所谓成功的商业模式就是开源社区免费测试，测试稳定了引入企业版。更多地例如 wine 与 crossover？
-
-这个系统这几年以来，非常地消耗资源，在 VMware 虚拟机中分配的 4G 内存根本无法满足它，必须给更多内存（6-8G）才能进行安装。否则在安装中就会 hang 住。
-
-### CentOS/Rocky Linux/RHEL
-
-目前，CentOS 已经不再是以往的基于 RHEL 源代码构建的操作系统，而是 RHEL 的中游测试系统（CentOS Stream），和 Fedora 差不多了。其替代品五花八门，甚至还有取得了 UNIX 认证的所谓 **欧拉系统**。但是我认为 Rocky Linux 更加有前景。
-
-尽管这些系统在服务器上被广泛部署，但具体缺点就是以牺牲软件的“新”来换取“稳”，软件版本非常陈旧。亦无法跨大版本升级（必挂，而且他们认为安全漏洞无所谓，也不用升级）
-
-### Debian
-
-![Debian Logo，图片来自 https://www.debian.org/](../.gitbook/assets/debian.png)
-
-Debian 俗称“大便”（[谐音](https://www.debian.org/intro/about)“/ˈde.bi.ən/”+Logo 长得像。~~很多人连 Debian 叫“大便”这种常识也没了吗……为此我必须附上一张大图让你自己看~~）有个[很奇怪的事情](https://lists.debian.org/debian-cd/2020/02/msg00000.html)，设置了 root 密码就不会安装 sudo，他们社区似乎认为这是一件合理的事情，但是你不知道 Gnome 和大多数的登录管理器都默认禁止 root 登录？另外影响远不止此，截止 Debian 12.6，会安装 sudo，但未加入 `wheel` 组，这太搞笑了，都没法重启网络，只能进 tty 自己登录 root 来动手，那还默认安个 GUI 干什么呢。
-
-> ```sh
-> ykla@debian:~$ sudo su
-> [sudo]ykla 的密码：
-> ykla 不是 sudoers 文件。
-> ykla@debian:~$ id
-> uid=1000(ykla) gid=1000(ykla) 组=1000(ykla),24(cdrom),25(floppy),29(audio),30(dip),44(video),46(plugdev),100(users),106(netdev),111(bluetooth),113(Lpadmin),116(scanner)
-> ykla@debian:~$ hostnamectl
-> Static hostname: debian
->       Icon name: computer-vm
->         Chassis: vm
->      Machine ID: 9b3107b788dd461f94ca93150474946e
->         Boot ID: 081c39d5ac4748fa9ec0b2157c9a5beb
->  Virtualization: vmware
-> Operating System: Debian GNU/Linux 12(bookworm)
->          Kernel: Linux 6.1.0-22-amd64
->    Architecture: x86-64
-> Hardware Vendor: VMware, Inc.
->  Hardware Model: VMware Virtual Platform
-> Firmware Version: 6.00
-> ```
-
-上述这种肉眼可见的 Bug 随手可拾——必须断网或者用高级用户安装才能把这款系统装上——因为他在安装时进行系统的换源不会换 `debian-security` 源，却要在安装时有网络的情况下进行更新（Ubuntu 也有这个毛病）；他的 [NetworkManager](https://wiki.debian.org/NetworkManager) 一直在和 Systemd 打架。这种反人类设计数不胜数，即使你报告了 Bug 他们也不会改，甚至不会有人回复你——另外我至今也不知道这玩意怎么报告 Bug。看起来，Debian 的 [Bug 收集平台](https://www.debian.org/Bugs/Reporting)就没想着让普通用户报告 Bug？这套流程比常见开源开发系统的都要离谱的多。~~果然看不到问题就是没有了吗。~~
-
-Debian 的软件包也不甚更新（此处仅指 stable）：Debian stable 大部分的软件包在发布后就版本号几乎不会变了。会锁死。除非你切到 unstable（sid）之类的，但是那等同于把自己变成 Ubuntu。
-
-不得不说这个系统很稳定，同时软件包也相当旧。几乎是 deb 版本的 CentOS。
-
-### OpenSUSE
-
-完整的 OpenSUSE 在物理机上安装后系统非常的卡顿，据说是 btrfs 文件系统的某个特性，也许特别卡就是特性之一吧。此处拿的是三台不同时期的英特尔平台的物理机测试的。无论是 3 代、还是 6 代都卡的不要不要的。绝非硬件问题。装上去不到一个小时就卡的鼠标都移动不了了，只能强制断电。故，我严重怀疑那些吹嘘 openSUSE 的人，自己到底有没有用过？亦或者是直接把 btrfs 改成了 ext4？真的是有很多人都是云用户，你但凡谷歌搜索“OpenSUSE btrfs hang”就知道这不是孤证。
-
-OpenSUSE 俗称大蜥蜴（Logo）他所做的最迷惑的一件事是他的版本号：为了纪念英国作家道格拉斯·亚当斯在《银河系漫游指南》中写到的这个数字“42”，（被称作 “the answer to life, the universe and everything”，生命、宇宙以及任何事情的终极答案），OpenSUSE 把版本号从 13 蹦到了 42，然后又从 42 降回到了 15。然后搞笑的一件事是：从 42 到 15 本应是升级的过程，但是 42 的版本号比 15 大，于是你到了 15 再升级就会再反向升级到 42。 那么现在问题来了，到了 41 再升级是到 42 还是 43 呢？能做出如此搞笑又迷惑事情的发行版，据我所知，仅此一家（如果有别的也这么离谱，欢迎 PR）
-
-openSUSE 有时会往整个正在使用的软件包里加入测试性功能，而不进行任何警告与提示。直到你去给他提交 bug，他才会告诉你那是他们故意那么搞得，然后再把测试功能关掉。
-
-他们的原生包管理器命令 `zypper` 和 `dnf` 一直在打架。目前不知道谁打赢了。但我估计 dnf 会赢，因为 zypper 各种反人类（~~比如你数数这有几个字母？~~ `zypper` 相比 `dnf` 存在明显的卡顿和延迟）
-
-### Gentoo
-
-Gentoo [自称](https://www.gentoo.org/get-started/about/)是“元发行版（_metadistribution_）”。一切软件都要通过 **编译** 的方式来进行安装（最近好像有了[官方二进制源了](https://www.gentoo.org/news/2023/12/29/Gentoo-binary.html)，但是很遗憾，这除了让他的依赖更加混乱以外好像没有别的用处……）其缺点也很明显，如果一个程序编译不过去就无法安装了，实际上这种软件非常多。有人会抬杠说 Gentoo 有二进制安装方式，但是自己制作也不具备通用性。一旦你一段时间不更新，Gentoo 会告诉你什么叫做 **循环依赖**。而且 Gentoo 难以大规模部署，也难以在服务器上部署。
-
-另外 Gentoo 的 portage（包管理器）是[纯 Python 语言编写的（92.5 %）](https://github.com/gentoo/portage)，这直接导致了计算依赖的时间延迟：在树莓派 4 上，安装 KDE 5 往往要计算几个小时……即使是在英特尔 i7-6700HQ 处理器上，也要算上个几分钟，如此离谱的包管理器，只此一家，别无分号。你不要以为只算一次就算完事了，你忘了什么叫 **循环依赖** 了吗？每回少则计算三四回，多则七八回，或者压根就操作不了，只能放弃。随着你安装的包越多，你花在包管理器上的时间将明显呈几何增长。
-
-简而言之，Gentoo 用自己的哲学捆绑了用户，简单问题复杂化，自己折磨自己；USE 过于复杂，对于一些常用软件，都经常出现循环依赖问题，破坏系统稳定性，软件安装升级卸载困难。如果说 Arch Linux 是滚着滚着就挂了，那么 Gentoo Linux 则是根本不让你滚，你想滚也滚不动。一旦过了几天乃至几星期，你就再也不需要滚动了——你再也动不了任何软件了，无论是卸载、安装还是更新。复杂的 USE，以致于每天都在用 Gentoo 的人也在和这套哲学体系搏斗。Gentoo 社区的日常话题就是依赖问题如何解决。
-
-Gentoo 平台几乎没有任何 Bug 跟踪回馈机制。对于使系统完全没法用的包管理器 app-portage/layman 的相关 Bug，他们只会在七八年后，那个软件被删除时告诉你问题不存在了。或者在 [3 年后](https://bugs.gentoo.org/700744)再回复你。他们这个 Bug 报告平台非常难用。各种搜索不到。虽然看上去是和 FreeBSD 用的是一个平台，但还不如直接谷歌“xxx site:bugs.gentoo.org”。现在你去他的 Bug 报告平台[去搜](https://bugs.gentoo.org/buglist.cgi?quicksearch=app-portage%2Flayman&list_id=7231000)“app-portage/layman”，居然是“Zarro Boogs found.（没有找到任何 Bug）”。~~果然看不到问题就是没有了吗。~~ [高级搜索](https://bugs.gentoo.org/query.cgi)也一样乱七八糟，找不到泛查询。
-
-### Deepin/UOS/中标麒麟
-
-UOS 和 Deepin 的关系就好比 RHEL 之于 Fedora。本质上是一种东西。Deepin 系统似乎[从不进行软件测试](https://bbs.deepin.org/post/218041)（更严重的或者骂的比较厉害的帖子早被删了，目前整个论坛只能搜到 15 个相关的，看不到就是不存在问题啦），直接就将更新包推送给用户，最直接结果就是他知道更新会导致系统崩溃也不撤回当次更新，而是在官网一个小角落里写个帖子和你讲怎么修复？这是令人迷惑的思路和解决方案（无独有偶，如果你用过他们的商业性 UOS 系统，这种类似的迷惑行为和解决思路亦只多不少，到处都是）是的，我刚安装好系统就升级，然后就挂了，这也不是一次两次了，我从未再用过——要知道，Arch Linux 都没有这么离谱。
-
-Deepin 这个系统仅仅是复制文件就会导致桌面卡死，无法理解他的系统是怎么做出来的，难道他自己的开发者不需要复制文件吗？
-
-> 有些人一直在 **云** 这个东西，反驳说他这么垃圾怎么可能还卖得出去，还会有人买。那么**你到底用过没有呢？** 系统的市场表现可能不错，但这并不一定能反映其技术质量——比如 Linux。多说也没用，你用过吗？
-
-这种不测试就推更新的行为不仅发生在开源的 Deepin 上，UOS 也经常如此。而且不是一次两次了，他们好像和微软一样没有测试团队。即使是 UOS 更新服务器全部宕机，或者是测试时写错配置导致用户主机自带 UOS 浏览器无限打开几十上百个 UOS 主页，也不会发任何公告。这点和国内的大多数互联网企业都比较像，连最基本的服务状态查看网站都没有。
-
-对于中标麒麟无话可说，甚至连最基本的 zip 乱码问题都没打补丁……
-
-一个现实问题就是[漏洞](https://src.uniontech.com/#/security_advisory_detail?utsa_id=UTSA-2024-003941)根本打不上补丁，尤其对于内网机器来说。因为 Linux 的机制是滚动更新，即使阶段版本亦如此。但是内网必定是停留在某版本内的，就存在无穷尽的依赖问题。而这是根本上无法解决的一个悖论。有一说一，这个漏洞报告页面起码改了七八回才勉强标准了起来能让人看。
-
-> **思考题**
->
-> 什么是 Linux 操作系统根社区？
->
-> - 从 Linux kernel 和其他开源组件而构建，不依赖上游发行版社区
->
-> - 采用开源社区运行模式，有大量的外部个人贡献者与企业参与
->
-> - 被广泛认可，衍生出不同分支或下游社区
->
-> - 与各开源组件社区沟通畅通，并持续回馈自己的能力
->
->   ——[[社区新闻] 深度社区全新规划：打造中国主导的桌面系统根社区！](https://bbs.deepin.org/post/237175)
->
-> > ① 如果一个操作系统，长得像 Debian，运行的软件也都来自 Debian，内核也一模一样，那么你凭什么说他是 Ubuntu？
-> >
-> > ② 根社区的“根”到底在哪？他们究竟维护着什么“根”？
-
-### Arch Linux/Manjaro
-
-Arch Linux 俗称“**[邪教](https://zh.moegirl.org.cn/zh-hans/Arch_Linux%E5%A8%98)、[洗发水](https://bbs.archlinuxcn.org/viewtopic.php?id=694)**”。这是我所见过的一个最不稳定的 Linux 发行版，也是被别人忽悠从而安装最多的一个。
-
-我难以理解为什么有这么多人推崇如此不稳定的一个操作系统。你安装的软件越多，挂的越快（你不信你把完整的 gnome 安装上，看看你能维持几天不挂？）有人会说这是你不看软件发行注记的后果，此言差矣。一个需要看发行注记才能更新的系统，本身就是有问题——和 Deepin 把解决方案写在墙角有区别？
-
-Arch Linux 唯一优点就是软件新（但是也不是所有的都新，一些工具类、尤其是大部分 **实用工具** 就不怎么新，例如大部分 R 包还没有 FreeBSD 新）似乎随处可见的就是 Arch Linux。Arch Linux 似乎是与苦难哲学挂钩的。
-
-Arch Linux 官方源里基本上没有什么软件，不导入 aur 源（ Arch User Repository，Arch 用户软件仓库）就完全没法用。而 aur 源是[未经过任何代码审查的](https://wiki.archlinux.org/title/Arch_User_Repository)（`Warning: AUR packages are user-produced content. These PKGBUILDs are completely unofficial and have not been thoroughly vetted. Any use of the provided files is at your own risk.`，`警告： AUR 中的软件包是由其他用户编写的，这些 PKGBUILD 完全是非官方的，未经彻底审查。使用这些文件的风险由您自行承担。`）实际上不是未经彻底审查，是根本没有任何审查：也就是说有人往里面塞 `rm -rf /*` 也是可以的。虽然 fakeroot 在一定程度上限制了恶意软件的执行权限，但它并不能完全防止用户因安装未审查的软件包而面临的安全风险——你忘记[安卓的格机模块](https://www.bilibili.com/read/cv19088202/)了？即使是谷歌市场也有一堆恶意软件，更何况现在压根没有审查。这并非危言耸听，Arch Linux [之前](https://www.linuxuprising.com/2018/07/malware-found-on-arch-user-repository.html?m=1)就出现过这种事情。
-
-正如 FreeBSD 开发者 Warner Losh 所说，“如今，在开源项目处于日益恶劣的工作环境下，一些看似多余的步骤却往往是必要的。”
-
-#### 参考文献
-
-- [Benefits of Gentoo](https://wiki.gentoo.org/wiki/Benefits_of_Gentoo)
-- [The philosophy of Gentoo](https://www.gentoo.org/get-started/philosophy/)
-- [Arch compared to other distributions](https://wiki.archlinux.org/title/Arch_compared_to_other_distributions)，翻译[在这里](https://wiki.archlinuxcn.org/wiki/Arch_%E4%B8%8E%E5%85%B6%E4%BB%96%E5%8F%91%E8%A1%8C%E7%89%88%E7%9A%84%E6%AF%94%E8%BE%83)
 
 ## Linux 败局
 
